--- a/02. 语法和API/CSS/06. 移动端适配布局/01. 移动端rem布局原理解析.md
+++ b/02. 语法和API/CSS/06. 移动端适配布局/01. 移动端rem布局原理解析.md
@@ -1,5 +1,10 @@
 [大前端学习笔记整理【五】rem与px换算的计算方式](https://www.cnblogs.com/azhai-biubiubiu/p/6003597.html)
 
+[大厂是怎么做移动端适配的](https://juejin.cn/post/6847902224740253709)
+
+[移动端适配大全---原理和方案](https://juejin.cn/post/7032685883769913380)
+
+[2022 年移动端适配方案指南 — 全网最新最全](https://juejin.cn/post/7046169975706353701)
 
 rem/em/px
 
