--- a/02. 语法和API/ES语法/00. 基础语法/函数/函数柯里化.md
+++ b/02. 语法和API/ES语法/00. 基础语法/函数/函数柯里化.md
@@ -158,7 +158,7 @@ const persons = [
 
 // 这里的 curry 函数，之前已实现
 const getProp = curry(function (obj, index) {
-    const args = [].slice.call(arguments);
+    const args = [...arguments];
     return obj[args[args.length - 1]];
 });
 
