--- a/02. 语法和API/ES语法/09. 异步编程/09. async和await.md
+++ b/02. 语法和API/ES语法/09. 异步编程/09. async和await.md
@@ -335,6 +335,8 @@ function asyncToGenerator(generatorFunc) {
 
 [手写 async await 的最简实现（20 行）](https://juejin.cn/post/6844904102053281806)
 
+[Async是如何被JavaScript实现的](https://zhuanlan.zhihu.com/p/473245486?utm_source=wechat_session&utm_medium=social&utm_oi=28686954790912&utm_campaign=shareopn)
+
 [ES6 系列之我们来聊聊 Async](https://github.com/mqyqingfeng/Blog/issues/100)
 
 [ES6 系列之 Babel 将 Async 编译成了什么样子](https://github.com/mqyqingfeng/Blog/issues/103)
