--- a/06. 运行和监控/06. 浏览器/08. 浏览器.md
+++ b/06. 运行和监控/06. 浏览器/08. 浏览器.md
@@ -14,6 +14,8 @@
 
 [从输入 URL 到页面加载完成的过程中都发生了什么事情？](https://fex.baidu.com/blog/2014/05/what-happen/)
 
+[Chrome V8 原理讲解](https://www.zhihu.com/people/v8blink/posts)
+
 ## Devtools
 
 [Chrome_Devtools_Tricks](https://github.com/dendoink/FrontendWingman/tree/master/Chrome_Devtools_Tricks)
