--- a/07. 前端框架/01. 框架基础/03. MVVM.md
+++ b/07. 前端框架/01. 框架基础/03. MVVM.md
@@ -27,3 +27,5 @@
 - 其他操作业务等还是应该放在 `Controller` 中实现，这样就实现了业务逻辑组件的复用。
 
 [Mvvm 前端数据流框架精讲](https://github.com/ascoders/blog/issues/27)
+
+[前端框架MVC和MVVM的理解](https://blog.csdn.net/qq_29722281/article/details/99717680?spm=1001.2014.3001.5501)
