--- a/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
+++ b/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
@@ -42,6 +42,8 @@ const vnode = createElement('div', {className: 'one'},
 
 ## Diff 遍历算法
 
+[探索Virtual DOM的前世今生](https://juejin.cn/post/6844903609667321863)
+
 [Virtual Dom 和 Diff 算法在 React 中是如何工作的？](https://medium.com/@gethylgeorge/how-virtual-dom-and-diffing-works-in-react-6fc805f9f84e)需自备梯子
 
 [React 核心知识点 -- Virtual Dom 与 Diff](https://github.com/pfan123/Articles/issues/62)
