--- a/面经.md
+++ b/面经.md
@@ -8,4 +8,6 @@
 
 [(下篇)中高级前端大厂面试秘籍，寒冬中为您保驾护航，直通大厂](https://juejin.cn/post/6844903830979608584)
 
+[关于面试这件事](https://juejin.cn/post/7029864660169916447)
 
+[面试复盘（一）：面试官「前阿里大佬」果然厉害](https://juejin.cn/post/6936843243489329165)
