--- a/02. 语法和API/ES语法/00. 基础语法/深入数组/01. 概念及API认识.md
+++ b/02. 语法和API/ES语法/00. 基础语法/深入数组/01. 概念及API认识.md
@@ -177,18 +177,18 @@ console.log(array===array2, array2);
 ```javaScript
 /**
  * 给你两个有序整数数组 nums1 和 nums2，请你将 nums2 合并到 nums1 中，使 nums1 成为一个有序数组。
- * 
+ *
  * 输入:
  * nums1 = [1,2,3,0,0,0]； m = 3
  * nums2 = [2,5,6]；       n = 3
- * 
- * 输出: [1,2,2,3,5,6] 
- * 
+ *
+ * 输出: [1,2,2,3,5,6]
+ *
  * 题目分析：
  * 首先是将 nums2 合并到 nums1 里面，不可新开数组，否则将无法通过；
  * 其次是合并完了之后 nums1 还是一个有序数组，这里也是需要注意的；
  * 另外样例里面 nums1 和 nums2 都有“2”这个数，也都需要将重复的合并进去。
- * */ 
+ * */
 
 var merge = function(nums1, m, nums2, n) {
     nums1.splice(m);
@@ -249,10 +249,10 @@ console.log(str); // [object Object],123,abc,2016/1/5 下午1:06:23
 /**
  * Array.prototype.indexOf(searchElement[, fromIndex])
  * 返回在数组中可以找到一个给定元素的第一个索引，如果不存在，则返回-1。
- * 
+ *
  * Array.prototype.lastIndexOf(searchElement[, fromIndex])
  * 返回指定元素（也即有效的 JavaScript 值或变量）在数组中的最后一个的索引，如果不存在则返回 -1。从数组的后面向前查找，从 fromIndex 处开始。
- * 
+ *
  * */
 var array = ['abc', 'def', 'ghi','123'];
 console.log(array.indexOf('def')); // 1
@@ -261,7 +261,7 @@ console.log(array.indexOf('def')); // 1
  * Array.prototype.includes(valueToFind[, fromIndex])
  * 用来判断一个数组是否包含一个指定的值，根据情况，如果包含则返回 true，否则返回 false。
  * 需要注意的是，如果元素中有 0，那么在判断过程中不论是 +0 还是 -0 都会判断为 True，这里的 includes 忽略了 +0 和 -0。
- * */ 
+ * */
 var array = [-0, 1, 2];
 console.log(array.includes(+0)); // true
 console.log(array.includes(1)); // true
@@ -272,9 +272,9 @@ console.log(array.includes(NaN)); // true
  * Array.prototype.toSource()
  * ⚠️非标准: 该特性是非标准的，请尽量不要在生产环境中使用它！
  * 返回一个字符串,代表该数组的源代码.
- * */ 
+ * */
 var alpha = new Array("a", "b", "c");
-alpha.toSource(); 
+alpha.toSource();
 ```
 
 ## 数组遍历的方法
@@ -313,19 +313,19 @@ var array = [18, 9, 10, 35, 80];
 var isExist = array.some(function(value, index, array){
   return value > 20;
 });
-console.log(isExist); // true 
+console.log(isExist); // true
 
 /**
  * Array.prototype.map(callback(currentValue [, index [, array]])[, thisArg])
  * 创建一个新数组，其结果是该数组中的每个元素是调用一次提供的函数后的返回值。
- * */ 
+ * */
 var array = [18, 9, 10, 35, 80];
 array = array.map(item => item + 1);
 console.log(array);  // [19, 10, 11, 36, 81]
 
 /**
  * Array.prototype.filter(currentValue [, index [, array]])[, thisArg])
- * 创建一个新数组, 其包含通过所提供函数实现的测试的所有元素。 
+ * 创建一个新数组, 其包含通过所提供函数实现的测试的所有元素。
  * */
 var array = [18, 9, 10, 35, 80];
 var array2 = array.filter(function(value, index, array){
@@ -339,14 +339,14 @@ console.log(array2); // [35, 80]
  * @param CurrentValue 当前值
  * @param CurrentIndex 当前索引
  * @param SourceArray 源数组
- * 
- * @param initialValue 作为第一次调用 callback函数时传给 previousValue 的值。 
+ *
+ * @param initialValue 作为第一次调用 callback函数时传给 previousValue 的值。
  *                     如果没有提供初始值，则将使用数组中的第一个元素。
  *                     在没有初始值的空数组上调用 reduce 将报错。
- * 
+ *
  * Array.prototype.reduce(callback(previousValue, currentValue[, currentIndex[, sourceArray]])[, initialValue])
  * 对数组中的每个元素执行一个 reducer 函数(升序执行)，将其结果汇总为单个返回值。
- * */ 
+ * */
 // reduce方法
 var array = [1, 2, 3, 4];
 var s = array.reduce(function(previousValue, value, index, array){
@@ -377,7 +377,7 @@ console.log(iterator.next().value); // undefined, 迭代器处于数组末尾时
 /**
  * Array.prototype.find(callback(currentValue [, index[, array]])[, thisArg])
  * 返回数组中满足提供的测试函数的第一个元素的值。否则返回 undefined。
- * 
+ *
  * Array.prototype.findIndex(callback(currentValue [, index[, array]])[, thisArg])
  * 返回数组中满足提供的测试函数的第一个元素的索引。若没有找到对应元素则返回-1。
  * */
@@ -396,18 +396,29 @@ console.log(array.findIndex(f2)); // -1
 /**
  * Array.prototype.keys()
  * 返回一个包含数组中每个索引键的Array Iterator对象。
- * */ 
+ * */
 [...Array(10).keys()];     // [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 [...new Array(10).keys()]; // [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
 /**
  * Array.prototype.values()
  * 返回一个新的 Array Iterator 对象，该对象包含数组每个索引的值
- * */ 
+ * */
 var array = ["abc", "xyz"];
 var iterator = array.values();
 console.log(iterator.next().value);//abc
 console.log(iterator.next().value);//xyz
 ```
 
+## forEach 循环中可以使用 break 退出循环吗？
+
+map, filter, forEach, reduce + loops 中不可以。因为 `break` 在 `callback`，而 `callback` 每次执行都会返回一个结果，所以这并不会中断循环，因此，`break` 或 `continue` 对于遍历而言，并不是有效语句。
+
+[如何在 Array.forEach 的循环里 break？](https://jser.me/2014/04/02/%E5%A6%82%E4%BD%95%E5%9C%A8Array.forEach%E7%9A%84%E5%BE%AA%E7%8E%AF%E9%87%8Cbreak.html)
+
+## 真得需要考虑它们的性能吗？
+
+除非是写引擎一类的性能要求极高的代码，否则用 map，filter，reduce 这些可读性高，支持链调用的方法才是更佳选择。
+
+首先这种性能测试方法可不可靠太难说了，一般情况下是首选使用 forEach/map/find/filter 的，相比性能，我更在乎代码的语义是否更强， 而 forEach/map/filter 很容易让别人知道我是在做遍历、转换、筛选。
 
