--- a/02. 语法和API/ES语法/00. 基础语法/01. JS中的数据类型.md
+++ b/02. 语法和API/ES语法/00. 基础语法/01. JS中的数据类型.md
@@ -50,7 +50,7 @@
 
 ## `BigInt`
 
-> BigInt 是一种内置对象，它提供了一种方法来表示大于 253 - 1 的整数。这原本是 Javascript 中可以用 Number 表示的最大数字。BigInt 可以表示任意大的整数。
+> BigInt 是一种内置对象，它提供了一种方法来表示大于 2 ** 53 - 1 的整数。这原本是 Javascript 中可以用 Number 表示的最大数字。BigInt 可以表示任意大的整数。
 
 ### 为什么需要 `BigInt`?
 
