--- a/02. 语法和API/ES语法/00. 基础语法/03. Number.md
+++ b/02. 语法和API/ES语法/00. 基础语法/03. Number.md
@@ -1,8 +1,12 @@
 数字类型可以存储的数据包括:正负整数、浮点数、十六进制数与八进制数、指数以及特殊数值 NaN、Infinity、-Infinity。
 
-## 八进制与十六进制
+## 二进制、八进制与十六进制
 
-1. 当一个数字以 0 开头时，就表示这是一个八进制数。
+1. ES6 提供了二进制和八进制数值的新的写法，分别用前缀 `0b`（或 `0B`）和 `0o`（或 `0O`）表示。
+
+从 ES5 开始，在严格模式之中，八进制就不再允许使用前缀 `0` 表示，ES6 进一步明确，要使用前缀 `0o` （或 `0O`）表示。
+
+如果要将 `0b` 和 `0o` 前缀的字符串数值转为十进制，要使用 `Number` 方法。
 
 2. 在 `JavaScript` 中，我们会用 `0x` 前缀来表示一个十六进制值(`hexadecimal value`，简称 为 `hex` )。
 
@@ -52,6 +56,139 @@
 
 `(10).toString(16)` 这里加了"括号"就可以用 `toString` 方法，不加的话就报错。是因为默认地，数字后的点号会被当成小数来进行解析，所以接“toString”会报错。而加了括号之后在进行词法分析的时候括号内的数字 10 就会被单独解析，和后面的属性 toString 以及参数 16 组合成一个表达式。
 
+## ES6+ 新特性
+
+### 数值分隔符
+
+1. ES2021，允许 JavaScript 的数值使用下划线 `_` 作为分隔符。
+
+2. 数值分隔符没有指定间隔的位数，可以每三位添加一个分隔符，也可以每一位、每两位、每四位添加一个。
+
+3. 小数和科学计数法也可以使用数值分隔符。数值分隔符可以按字节顺序分隔数值，这在操作二进制位时，非常有用。
+
+4. 数值分隔符有几个使用注意点。
+
+- 不能放在数值的最前面（leading）或最后面（trailing）。
+
+- 不能两个或两个以上的分隔符连在一起。
+
+- 小数点的前后不能有分隔符。
+
+- 科学计数法里面，表示指数的 e 或 E 前后不能有分隔符。
+
+- 分隔符不能紧跟着进制的前缀 `0b`、`0B`、`0o`、`0O`、`0x`、`0X`。
+
+5. 数值分隔符只是一种书写便利，对于 JavaScript 内部数值的存储和输出，并没有影响。
+
+```javascript
+let num = 12_345;
+
+num; // 12345
+num.toString(); // 12345
+```
+
+`Number`、 `parseInt`、 `parseFloat` 三个将字符串转成数值的函数，不支持数值分隔符。主要原因是语言的设计者认为，数值分隔符主要是为了编码时书写数值的方便，而不是为了处理外部输入的数据。
+
+### `Number` 原型新方法
+
+1. `Number.isFinite()` 用来检查一个数值是否为有限的（finite），即不是 `Infinity`。如果参数类型不是数值，`Number.isFinite` 一律返回 `false`。
+
+2. `Number.isNaN()` 用来检查一个值是否为`NaN`。如果参数类型不是 `NaN`，`Number.isNaN` 一律返回 `false`。
+
+它们与传统的全局方法 `isFinite()` 和 `isNaN()` 的区别在于，传统方法先调用 `Number()` 将非数值的值转为数值，再进行判断，而这两个新方法只对数值有效，`Number.isFinite()` 对于非数值一律返回 `false`, `Number.isNaN()` 只有对于 `NaN` 才返回 `true`，非 `NaN` 一律返回 `false`。
+
+3. ES6 将全局方法 `parseInt()` 和 `parseFloat()`，移植到 `Number` 对象上面，行为完全保持不变。
+
+这样做的目的，是逐步减少全局性方法，使得语言逐步模块化。
+
+```javascript
+Number.parseInt === parseInt; // true
+Number.parseFloat === parseFloat; // true
+```
+
+4. `Number.isInteger()` 用来判断一个数值是否为整数。
+
+注意：
+
+- JavaScript 内部，整数和浮点数采用的是同样的储存方法，所以 25 和 25.0 被视为同一个值。
+
+- 如果参数不是数值，`Number.isInteger` 返回 `false`。
+
+- 如果对数据精度的要求较高，不建议使用 `Number.isInteger()` 判断一个数值是否为整数。
+
+由于 JavaScript 采用 IEEE 754 标准，数值存储为 64 位双精度格式，数值精度最多可以达到 53 个二进制位（1 个隐藏位与 52 个有效位）。如果数值的精度超过这个限度，第 54 位及后面的位就会被丢弃，这种情况下，`Number.isInteger` 可能会误判。
+
+```javaScript
+Number.isInteger(3.0000000000000002) // true
+```
+
+上面代码中，`Number.isInteger` 的参数明明不是整数，但是会返回 `true`。原因就是这个小数的精度达到了小数点后 16 个十进制位，转成二进制位超过了 53 个二进制位，导致最后的那个 2 被丢弃了。
+
+类似的情况还有，如果一个数值的绝对值小于 `Number.MIN_VALUE（5E-324）`，即小于 JavaScript 能够分辨的最小值，会被自动转为 0。这时，`Number.isInteger` 也会误判。
+
+```javascript
+Number.isInteger(5e-324); // false
+Number.isInteger(5e-325); // true
+```
+
+上面代码中，`5E-325` 由于值太小，会被自动转为 0，因此返回 `true`。
+
+5. 安全整数和 `Number.isSafeInteger()`
+
+JavaScript 能够准确表示的整数范围在-2^53到2^53之间（不含两个端点），超过这个范围，无法精确表示这个值。
+
+```javascript
+Math.pow(2, 53) // 9007199254740992
+
+9007199254740992  // 9007199254740992
+9007199254740993  // 9007199254740992
+
+Math.pow(2, 53) === Math.pow(2, 53) + 1
+// true
+```
+
+ES6 引入了Number.MAX_SAFE_INTEGER和Number.MIN_SAFE_INTEGER这两个常量，用来表示这个范围的上下限。
+
+```javascript
+Number.MAX_SAFE_INTEGER === Math.pow(2, 53) - 1
+// true
+Number.MAX_SAFE_INTEGER === 9007199254740991
+// true
+
+Number.MIN_SAFE_INTEGER === -Number.MAX_SAFE_INTEGER
+// true
+Number.MIN_SAFE_INTEGER === -9007199254740991
+// true
+```
+
+`Number.isSafeInteger()` 则是用来判断一个整数是否落在这个范围之内。
+
+实现原理就是跟安全整数的两个边界值比较一下。
+
+```javascript
+Number.isSafeInteger = function (n) {
+  return (typeof n === 'number' &&
+    Math.round(n) === n &&
+    Number.MIN_SAFE_INTEGER <= n &&
+    n <= Number.MAX_SAFE_INTEGER);
+}
+```
+
+实际使用这个函数时，需要注意。验证运算结果是否落在安全整数的范围内，不要只验证运算结果，而要同时验证参与运算的每个值。
+
+```javascript
+Number.isSafeInteger(9007199254740993)
+// false
+Number.isSafeInteger(990)
+// true
+Number.isSafeInteger(9007199254740993 - 990)
+// true
+9007199254740993 - 990
+// 返回结果 9007199254740002
+// 正确答案应该是 9007199254740003
+```
+
+
 ## `0.1 + 0.2`为什么不等于`0.3`?发生小数计算错误的具体原因是什么？
 
 出现这种情况的原因在于计算的时候，JavaScript 引擎会先将十进制数转换为二进制，然后进行加法运算，再将所得结果转换为十进制。在进制转换过程中如果小数位是无限的，就会出现误差。
@@ -76,35 +213,35 @@ parseFloat((0.1 + 0.2).toPrecision(12)) // 0.3
 
 判断两个小数进行加法运算是否精确的简单函数：
 
-```javaScript 
-function judgeFloat(n, m) { 
-  const binaryN = n.toString(2); 
-  const binaryM = m.toString(2); 
+```javaScript
+function judgeFloat(n, m) {
+  const binaryN = n.toString(2);
+  const binaryM = m.toString(2);
   console.log(`${n}的二进制是    ${binaryN}`);
   console.log(`${m}的二进制是 ${binaryM}`);
   const MN = m + n;
   const accuracyMN = (m * 100 + n * 100) / 100;
   const binaryMN = MN.toString(2);
   const accuracyBinaryMN = accuracyMN.toString(2);
-  console.log(`${n}+${m}的二进制是${binaryMN}`); 
+  console.log(`${n}+${m}的二进制是${binaryMN}`);
   console.log(`${accuracyMN}的二进制是    ${accuracyBinaryMN}`);
-  console.log(`${n}+${m}的二进制再转成十进制是${to10(binaryMN)}`); 
+  console.log(`${n}+${m}的二进制再转成十进制是${to10(binaryMN)}`);
   console.log(`${accuracyMN}的二进制是再转成十进制是${to10(accuracyBinaryMN)}`); console.log(`${n}+${m}在 js 中计算是${(to10(binaryMN) === to10(accuracyBinaryMN)) ? '' : '不'}准确的`);
-} 
+}
 
-function to10(n) { 
-  const pre = (n.split('.')[0] - 0).toString(2); 
-  const arr = n.split('.')[1].split(''); 
-  let i = 0; 
-  let result = 0; 
-  while (i < arr.length) { 
-    result += arr[i] * Math.pow(2, -(i + 1)); i++; 
-  } 
-  return result; 
-} 
-  
-judgeFloat(0.1, 0.2); 
-judgeFloat(0.6, 0.7); 
+function to10(n) {
+  const pre = (n.split('.')[0] - 0).toString(2);
+  const arr = n.split('.')[1].split('');
+  let i = 0;
+  let result = 0;
+  while (i < arr.length) {
+    result += arr[i] * Math.pow(2, -(i + 1)); i++;
+  }
+  return result;
+}
+
+judgeFloat(0.1, 0.2);
+judgeFloat(0.6, 0.7);
 ```
 
 输出：
@@ -214,7 +351,7 @@ js 封装四则运算 `Arithmetic.js`
  * 减法实际上可看成加法，所以如果要做减法，只需第二个参数即被减数传负值即可
  * @param {Number} arg1 - 加数/减数
  * @param {Number} arg2 - 加数/被减数
- * */ 
+ * */
 export function addFloat(arg1, arg2) {
   let m = 0; // 记录两个加数中最长的小数位长度
   let arg1Str = arg1 + '';
@@ -233,7 +370,7 @@ export function addFloat(arg1, arg2) {
  * 带有小数的乘法运算
  * @param {Number} arg1 - 因数
  * @param {Number} arg2 - 因数
- * */ 
+ * */
 export function multiplyFloat(arg1, arg2) {
   let m = 0;
   const arg1Str = arg1 + '';
@@ -250,7 +387,7 @@ export function multiplyFloat(arg1, arg2) {
  * 有小数的除法运算
  * @param {Number} arg1 - 除数
  * @param {Number} arg2 - 被除数
- * */ 
+ * */
 export function divideFloat(arg1, arg2) {
   const arg1Str = arg1 + '';
   const arg2Str = arg2 + '';
@@ -262,7 +399,7 @@ export function divideFloat(arg1, arg2) {
 };
 ```
 
-* JavaScript 中浮点数比较的问题
+- JavaScript 中浮点数比较的问题
 
 在新的 ES6 中引入了一个 极小的常量`Number.EPSILON`,它表示 1 与大于 1 的最小浮点数之间的差。
 对于 64 位浮点数来说，大于 1 的最小浮点数相当于二进制的 1.00..001，小数点后面有连续 51 个零。这个值减去 1 之后，就等于 2 的-52 次方。
@@ -291,4 +428,4 @@ withinErrorMargin(1.1 + 1.3, 2.4) // true
 
 [js 小数的数学运算和四舍五入精度问题](https://juejin.im/post/5e3bb243f265da573a01e396)
 
-[JavaScript深入之浮点数精度](https://github.com/mqyqingfeng/Blog/issues/155)
+[JavaScript 深入之浮点数精度](https://github.com/mqyqingfeng/Blog/issues/155)
