--- a/02. 语法和API/ES语法/04. 解析JS中的this.md
+++ b/02. 语法和API/ES语法/04. 解析JS中的this.md
@@ -6,7 +6,7 @@
 
 在函数中 `this` 到底取何值，是在函数真正被调用执行的时候确定的，函数定义的时候确定不了。
 
-1. 场景 1：默认绑定（严格/非严格模式）—— 全局 & 调用普通函数
+### 场景 1：默认绑定（严格/非严格模式）—— 全局 & 调用普通函数
 
 在全局环境下， `this` 始终是全局对象本身。
 
@@ -39,7 +39,7 @@
   })();
 ```
 
-2. 场景 2：隐式绑定 —— 上下文对象调用中的 `this`
+### 场景 2：隐式绑定 —— 上下文对象调用中的 `this`
 
 在执行函数时，如果函数中的 `this` 是被上一级的对象所调用，那么 `this` 指向的就是上一级的对象；否则指向全局对象。即如果函数作为对象的一个属性时，并且作为对象的一个属性被调用时，函数中的 `this` 指向该对象。
 
@@ -96,7 +96,7 @@ function setTimeout(fn, delay) { // 等待delay毫秒
 }
 ```
 
-3. 场景 3：显式绑定 —— `bind/call/apply` 改变 `this` 指向
+### 场景 3：显式绑定 —— `bind/call/apply` 改变 `this` 指向
 
 当一个函数被 `bind/call/apply` 调用时， `this` 的值就取传入的对象的值。
 
@@ -104,7 +104,7 @@ function setTimeout(fn, delay) { // 等待delay毫秒
 
 但是对 `call/apply/bind` 的高级考察往往会结合构造函数以及组合式实现继承。
 
-4. 场景 4：构造函数 `new` 绑定
+### 场景 4：构造函数 `new` 绑定
 
 如果构造函数中显式返回一个值，且返回的是一个对象，那么 `this` 就指向这个返回的对象；如果返回的不是一个对象，那么 `this` 仍然指向实例。
 
@@ -112,7 +112,7 @@ function setTimeout(fn, delay) { // 等待delay毫秒
 
 **以上情况下可以用一句话来概括，this 总是指向调用该函数的对象。**
 
-5. 箭头函数中的 `this` 指向
+### 场景 5：箭头函数中的 `this` 指向
 
 箭头函数使用 `this` 不适用以上标准规则，而是根据外层（函数或者全局）上下文作用域来决定。
 
@@ -172,7 +172,7 @@ function setTimeout(fn, delay) { // 等待delay毫秒
 
   - 构造函数：箭头函数不能通过 new 关键字调用。
 
-6.  `this` 优先级相关
+###  `this` 优先级相关
 
 把通过 `call、apply、bind、new` 对 `this` 绑定的情况称为显式绑定；根据调用关系确定的 `this` 指向称为隐式绑定。
 
