--- a/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
+++ b/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
@@ -1,3 +1,6 @@
+[图解Diff算法——Vue篇](https://mp.weixin.qq.com/s/8M-pJdKjF6bx5ijtSFKIcw)
+
+
 ## 虚拟 DOM
 
 `Virtual dom`, 即虚拟 `DOM` 节点。它通过 `JS` 的 `Object` 对象模拟 `DOM` 中的节点，然后再通过特定的 `render` 方法将其渲染成真实的 `DOM` 节点。
