--- a/03. 网络和通讯/04. http/02. 状态码.md
+++ b/03. 网络和通讯/04. http/02. 状态码.md
@@ -2,25 +2,25 @@
 
 状态代码有三位数字组成，第一个数字定义了响应的类别，共分五种类别:
 
-**1xx：指示信息--表示请求已接收，继续处理**
+> 1xx：指示信息--表示请求已接收，继续处理
 
-**2xx：成功--表示请求已被成功接收、理解、接受**
+> 2xx：成功--表示请求已被成功接收、理解、接受
 
-**3xx：重定向--要完成请求必须进行更进一步的操作**
+> 3xx：重定向--要完成请求必须进行更进一步的操作
 
-**4xx：客户端错误--请求有语法错误或请求无法实现**
+> 4xx：客户端错误--请求有语法错误或请求无法实现
 
-**5xx：服务器端错误--服务器未能实现合法的请求**
+> 5xx：服务器端错误--服务器未能实现合法的请求
 
 常见状态码：
 
-> 200 OK //客户端请求成功
+> 200 OK // 客户端请求成功
 
-> 400 Bad Request //客户端请求有语法错误，不能被服务器所理解
+> 400 Bad Request // 客户端请求有语法错误，不能被服务器所理解
 
-> 401 Unauthorized //请求未经授权，这个状态代码必须和 WWW-Authenticate 报头域一起使用
+> 401 Unauthorized // 请求未经授权，这个状态代码必须和 WWW-Authenticate 报头域一起使用
 
-> 403 Forbidden //服务器收到请求，但是拒绝提供服务
+> 403 Forbidden // 服务器收到请求，但是拒绝提供服务
 
 > 404 Not Found //请求资源不存在，eg：输入了错误的 URL
 
