--- a/03. 网络和通讯/04. http/03. Request Header.md
+++ b/03. 网络和通讯/04. http/03. Request Header.md
@@ -20,7 +20,7 @@
 
 **第一部分：请求行，用来说明请求类型,要访问的资源以及所使用的 HTTP 版本.**
 
-GET 说明请求类型为 GET,[/562f25980001b1b106000338.jpg]为要访问的资源，该行的最后一部分说明使用的是 HTTP1.1 版本。
+GET 说明请求类型为 GET,![](./562f25980001b1b106000338.jpg)为要访问的资源，该行的最后一部分说明使用的是 HTTP1.1 版本。
 
 **第二部分：请求头部，紧接着请求行（即第一行）之后的部分，用来说明服务器要使用的附加信息**
 
