--- a/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
+++ b/07. 前端框架/01. 框架基础/04. 虚拟 DOM 和 diff 算法.md
@@ -1,5 +1,6 @@
 [图解Diff算法——Vue篇](https://mp.weixin.qq.com/s/8M-pJdKjF6bx5ijtSFKIcw)
 
+[如何理解虚拟DOM?](https://www.zhihu.com/question/29504639)
 
 ## 虚拟 DOM
 
