--- a/02. 语法和API/ES语法/00. 基础语法/01. JS中的数据类型.md
+++ b/02. 语法和API/ES语法/00. 基础语法/01. JS中的数据类型.md
@@ -4,7 +4,7 @@
 
 ### 6 种原始类型，使用 `typeof` 运算符检查:
 
-- `undefined`：一个没有被赋值的变量会有个默认值 `undefined`。
+- `undefined`：一个没有被赋值的变量会有个默认值 `undefined`，变量提升时的默认值也是 `undefined`。
 
 - `Boolean`：布尔表示一个逻辑实体，可以有两个值：`true` 和 `false`。
 
@@ -12,13 +12,13 @@
 
 - `String`：一组 16 位的无符号整数值的“元素”。
 
-- `BigInt`：`BigInt`类型是 `JavaScript` 中的一个基础的数值类型，可以用任意精度表示整数。
+- `BigInt`：`BigInt` 类型是 `JavaScript` 中的一个基础的数值类型，可以用任意精度表示整数。使用 `BigInt`，即使超出 `Number` 的安全整数范围限制，也可以安全地存储和操作。
 
 - `Symbol` ：唯一的并且是不可修改的, 并且也可以用来作为`Object`的`key`的值。
 
-- `null`：`Null` 类型只有一个值： `null`。
+- `null`：`Null` 类型只有一个值： `null`。使用 `typeof` 检测 `Null` 类型时，返回的是 `Object`。这是当初 `JavaScript` 语言的一个 Bug，一直保留至今，之所以一直没修改过来，主要是为了兼容老的代码。
 
-- `Object`：任何 `constructed` 对象实例的特殊非数据结构类型，也用做数据结构：n`ew Object`，`new Array`，`new Map`，`new Set`，`new WeakMap`，`new WeakSet`，`new Date`，和几乎所有通过 `new keyword` 创建的东西。
+- `Object`：任何 `constructed` 对象实例的特殊非数据结构类型，也用做数据结构：`new Object`，`new Array`，`new Map`，`new Set`，`new WeakMap`，`new WeakSet`，`new Date`，和几乎所有通过 `new keyword` 创建的东西。可以看作是一组属性的集合。
 
 其把这**8**种数据类型又分为两种：原始类型和对象类型（基本类型和引用类型）
 
