--- a/02. 语法和API/ES语法/00. 基础语法/09. 变量声明var、let、const详解.md
+++ b/02. 语法和API/ES语法/00. 基础语法/09. 变量声明var、let、const详解.md
@@ -2,17 +2,36 @@
 
 `ES6` 发布前，`JavaScript` 只能通过 `var` 声明变量的方式，常量、块级变量、函数变量这些概念的差别都不能很好的体现出来，于此同时，加入你要使用或者提供一个 `API`，`var` 声明的变量可随时被修改和重新分配的问题，会让你时刻担心代码是否能正常运行。
 
-`ES6` 为我们带来了 `let`、`const`，先来了解一下三个标识符的特征：
+`ES6` 带来了 `let`、`const`，先来了解一下三个标识符的特征：
 
 - `var` ： 声明变量， 其作用域为该语句所在的函数内，且存在变量提升现象；
 - `let` ： 声明变量， 其作用域为该语句所在的代码块内，不存在变量提升；
 - `const` ：声明常量， 不能再修改该常量的值， 实质是不能修改的是**栈内存在的值**（基本类型的直接值）和**地址**（引用类型值存在的对应的地址）。
 
+所谓的**变量提升**，是指在 `JavaScript` 代码执行过程中，`JavaScript` 引擎把变量的声明部分和函数的声明部分提升到代码开头的“行为”。变量被提升后，会给变量设置默认值，这个默认值就是 `undefined`。
+
+由于变量提升作用，使用 JavaScript 来编写和其他语言相同逻辑的代码，都有可能会导致不一样的执行结果。主要有以下两种原因。
+
+- 1. 变量容易在不被察觉的情况下被覆盖掉
+
+- 2. 本应销毁的变量没有被销毁
+
 ## 块级作用域
+
+作用域是指在程序中定义变量的区域，该位置决定了变量的生命周期。通俗地理解，作用域就是变量与函数的可访问范围，即作用域控制着变量和函数的可见性和生命周期。
 
 `ES5` 只有**全局作用域**和**函数作用域**，没有块级作用域。
 
+- 全局作用域中的对象在代码中的任何地方都能访问，其生命周期伴随着页面的生命周期。
+
+-   函数作用域就是在函数内部定义的变量或者函数，并且定义的变量或者函数只能在函数内部被访问。函数执行结束之后，函数内部定义的变量会被销毁。
+
+
 `ES6` 的块级作用域: `let` 实际上为 `JavaScript` 新增了块级作用域。
+
+块级作用域就是使用一对大括号包裹的一段代码，比如函数、判断语句、循环语句，甚至单独的一个 `{}` 都可以被看作是一个块级作用域。
+
+简单来讲，如果一种语言支持块级作用域，那么其代码块内部定义的变量在代码块外部是访问不到的，并且等该代码块中的代码执行完成之后，代码块中定义的变量会被销毁。
 
 ### 块级作用域与函数声明
 
@@ -29,42 +48,41 @@
 - 同时，函数声明还会提升到所在的块级作用域的头部。
 
 ```javaScript
-function f() { console.log('I am outside!'); }
-
-(function () {
-if (false) {
-// 重复声明一次函数 f
-function f() { console.log('I am inside!'); }
+function f() { 
+    console.log('I am outside!');
 }
 
+(function () {
+    if (false) {
+        // 重复声明一次函数 f
+        function f() { console.log('I am inside!'); }
+    }
     f();
-
 }());
 
 // 上面代码在 ES5 中运行，会得到“I am inside!”
 // 浏览器的 ES5 环境
-function f() { console.log('I am outside!'); }
-
-(function () {
-function f() { console.log('I am inside!'); }
-if (false) {
+function f() { 
+    console.log('I am outside!');
 }
 
+(function () {
+    function f() { 
+        console.log('I am inside!');
+    }
+    if (false) {}
     f();
-
 }());
 
 // 浏览器的 ES6 环境
 function f() { console.log('I am outside!'); }
 
 (function () {
-var f = undefined;
-if (false) {
-function f() { console.log('I am inside!'); }
-}
-
+    var f = undefined;
+    if (false) {
+        function f() { console.log('I am inside!'); }
+    }
     f();
-
 }());
 // Uncaught TypeError: f is not a function
 ```
@@ -248,6 +266,12 @@ a = [a,b];
 b = a[0];
 a = a[1];
 ```
+
+## 关于同名变量和函数的处理原则
+
+1. 如果是同名的函数，`JavaScript` 编译阶段会选择最后声明的那个。
+
+2. 如果变量和函数同名，那么在编译阶段，变量的声明会被忽略。但是会被变量赋值之后覆盖。
 
 参考文章：
 
