--- a/02. 语法和API/ES语法/00. 基础语法/10. apply、call、bind的区别与用法.md
+++ b/02. 语法和API/ES语法/00. 基础语法/10. apply、call、bind的区别与用法.md
@@ -183,7 +183,7 @@ Function.prototype.bind = function (context, ...args) {
 
 **扩展:**
 
-- **在低版本 IE 下不支持通过 Array.prototype.slice.call(domNodes)将类数组对象转换成数组**，因为低版本 IE（IE < 9）下的 DOM 对象是以 com 对象的形式实现的，js 对象与 com 对象不能进行转换。
+- **在低版本 IE 下不支持通过 Array.prototype.slice.call(domNodes)将类数组对象转换成数组**，因为低版本 `IE（IE < 9`）下的 DOM 对象是以 com 对象的形式实现的，js 对象与 com 对象不能进行转换。
 
 兼容写法如下：
 
