--- a/02. 语法和API/JS Web API/04. 事件机制.md
+++ b/02. 语法和API/JS Web API/04. 事件机制.md
@@ -50,6 +50,8 @@
 
 ## 事件冒泡和事件捕获
 
+事件冒泡和事件捕获分别由微软和网景公司提出，这两个概念都是为了解决页面中事件流（事件发生顺序）的问题。
+
 **事件捕获（event capturing）**： 通俗的理解就是，当鼠标点击或者触发 dom 事件时，浏览器会从根节点开始由外到内进行事件传播，即点击了子元素，如果父元素通过事件捕获方式注册了对应的事件的话，会先触发父元素绑定的事件。
 
 捕获阶段，事件依次传递的顺序是：`window` --> `document` --> `html`--> `body` --> 父元素 --> 子元素 --> 目标元素。
@@ -77,6 +79,10 @@ event.bubbles
 ```
 
 如果返回值为 `true`，说明该事件会冒泡；反之则相反。
+
+![事件冒泡和事件捕获过程图](./images/16a2654b0dd928ef_tplv-t2oaga2asx-zoom-in-crop-mark_3024_0_0_0.awebp)
+
+1-5 是捕获过程，5-6 是目标阶段，6-10 是冒泡阶段。
 
 事件冒泡和事件捕获很好理解，只不过是对同一件事情的不同看法。
 
@@ -234,7 +240,13 @@ IE9+/FF/Chrome 这 2 种模型都支持，可以通过 `addEventListener((type, 
 </body>
 ```
 
-当点击 outC 的时候，依次打印出 capture1 --> capture2 --> target --> bubble2 --> bubble1。到这里是不是可以理解 `addEventListener(type,handler,useCapture)` 这个 API 中第三个参数 `useCapture` 的含义呢？
+当点击 outC 的时候，依次打印出 capture1 --> capture2 --> target --> bubble2 --> bubble1。到这里是不是可以理解 `addEventListener(event,handler,useCapture)` 这个 API 中第三个参数 `useCapture` 的含义呢？
+
+| 参数       | 描述                                                                                                                                                                                                                                                              |
+| :--------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| event      | 必须。字符串，指定事件名。注意: 不要使用 "on" 前缀。 例如，使用 "click" ,而不是使用 "onclick"。提示： 所有 HTML DOM 事件，可以查看完整的 [HTML DOM Event 对象参考手册](https://link.juejin.cn/?target=http%3A%2F%2Fwww.runoob.com%2Fjsref%2Fdom-obj-event.html)。 |
+| function   | 必须。指定要事件触发时执行的函数。当事件对象会作为第一个参数传入函数。 事件对象的类型取决于特定的事件。例如， "click" 事件属于 MouseEvent(鼠标事件) 对象。                                                                                                        |
+| useCapture | true - 事件句柄在捕获阶段执行（即在事件捕获阶段调用处理函数）；false - 默认。事件句柄在冒泡阶段执行（即表示在事件冒泡的阶段调用事件处理函数）                                                                                                                     |
 
 `useCapture=false` 意味着：将事件处理函数加入到冒泡阶段，在冒泡阶段会被调用；
 
@@ -467,3 +479,5 @@ outC.addEventListener('click',function(){alert("target");},true);
 ```
 
 执行结果是只打印 capture，不会打印 target 和 bubble。
+
+[你真的理解 事件冒泡 和 事件捕获 吗？](https://juejin.cn/post/6844903834075021326)
