--- a/02. 语法和API/JS Web API/07. 存储.md
+++ b/02. 语法和API/JS Web API/07. 存储.md
@@ -23,3 +23,4 @@
 
 [localStorage、sessionStorage、cookie、session 几种 web 数据存储方式对比总结](https://juejin.cn/post/6844903989096497159)
 
+[预测最近面试会考 Cookie 的 SameSite 属性](https://juejin.cn/post/6844904095711494151)
