--- a/06. 运行和监控/01. 浏览器/01. 宏观视角下的浏览器/01. 浏览器架构进化史.md
+++ b/06. 运行和监控/01. 浏览器/01. 宏观视角下的浏览器/01. 浏览器架构进化史.md
@@ -146,15 +146,15 @@ JavaScript 也是运行在渲染进程中的，所以即使 JavaScript 阻塞了
 
 主要负责控制浏览器这个应用的 chrome（主框架）部分
 
-- 负责浏览器界面显示，与用户交互。包括地址栏、书签、前进/后退按钮等。
+- UI 线程负责浏览器界面显示，与用户交互。包括地址栏、书签、前进/后退按钮等。
 
 - 负责各个页面的管理，创建和销毁其他进程。
 
 - 子进程管理：将 Renderer 进程得到的内存中的 Bitmap，绘制到用户界面上。
 
-- 提供存储等功能。
+- 存储线程控制着访问本地文件的权限。
 
-- 同时也会处理浏览器不可见的高权限任务，如网络资源的管理、下载、发送网络请求、文件访问。
+- 同时也会处理浏览器不可见的高权限任务，如网络线程负责处理并接收来自互联网的网络资源、下载、发送网络请求、文件访问。
 
 #### 渲染进程（Renderer Process）
 
