--- a/06. 运行和监控/02. 渲染流程/02. 重绘、回流和合成.md
+++ b/06. 运行和监控/02. 渲染流程/02. 重绘、回流和合成.md
@@ -1,14 +1,18 @@
 ## 重绘（Repaint）和回流（Reflow）
 
-- 重绘是当节点需要更改外观而不会影响布局的，比如改变 color 就叫称为重绘
+- 重绘是当节点需要更改外观而不会影响布局的绘制属性，比如改变 color 就叫称为重绘
 
-对 DOM 的修改导致了样式的变化、却并未影响其几何属性（比如修改了颜色或背景色）时，浏览器不需重新计算元素的几何属性、直接为该元素绘制新的样式（跳过了上图所示的回流环节）。
+对 DOM 的修改导致了样式的变化、却并未影响其几何属性（比如修改了颜色或背景色）时，浏览器不需重新计算元素的几何属性、直接为该元素绘制新的样式（跳过了布局阶段）。
 
-- 回流是布局或者几何属性需要改变就称为回流。
+相较于重排操作，重绘省去了布局和分层阶段，所以执行效率会比重排操作要高一些。
 
-对 DOM 的修改引发了 DOM 几何尺寸的变化（比如修改元素的宽、高或隐藏元素等）时，浏览器需要重新计算元素的几何属性（其他元素的几何属性和位置也会因此受到影响），然后再将计算的结果绘制出来，这个过程就是回流（也叫重排）。
+- 回流是布局或者几何属性需要改变。
+
+对 DOM 的修改引发了 DOM 几何尺寸的变化（比如修改元素的宽、高或隐藏元素等）时，浏览器需要重新计算元素的几何属性（其他元素的几何属性和位置也会因此受到影响），然后再将计算的结果绘制出来，这个过程就是回流（也叫重排）。重排需要更新完整的渲染流水线，所以开销也是最大的。
 
 回流必定会发生重绘，重绘不一定会引发回流。回流所需的成本比重绘高的多，改变深层次的节点很可能导致父节点的一系列回流。
+
+重绘，重排是cpu运算的，且占用页面主线程。
 
 1. 常见引起回流属性和方法
 
@@ -84,9 +88,15 @@
 
 10. 将频繁重绘或者回流的节点设置为图层，图层能够阻止该节点的渲染行为影响别的节点。比如对于 video 标签来说，浏览器会自动将该节点变为图层。
 
-## 普通图层和复合图层
+## 合成 (Composite)
 
-渲染步骤中就提到了合成 (Composite)概念。
+渲染步骤中就提到了合成 (Composite)概念。**如果更改一个既不要布局也不要绘制的属性，渲染引擎将跳过布局和绘制，只执行后续的合成操作，把这个过程叫做合成。**
+
+![避开重排和重绘](../images/composite.png)
+
+在上图中，我们使用了 CSS 的 transform 来实现动画效果，这可以避开重排和重绘阶段，直接在非主线程上执行合成动画操作。这样的效率是最高的，因为是在非主线程上合成，并没有占用主线程的资源，另外也避开了布局和绘制两个子阶段，所以相对于重绘和重排，合成能大大提升绘制效率。
+
+### 普通图层和复合图层
 
 一般来说，可以把普通文档流看成一个图层。特定的属性可以生成一个新的图层。不同的图层渲染互不影响。可以简单的这样理解，浏览器渲染的图层一般包含两大类：普通图层以及复合图层
 
@@ -128,3 +138,20 @@
 **webkit CSS3 中，如果这个元素添加了硬件加速，并且 `z-index` 层级比较低，那么在这个元素的后面其它元素（层级比这个元素高的，或者相同的，并且 `releative` 或 `absolute` 属性相同的），会默认变为复合层渲染，如果处理不当会极大的影响性能**
 
 简单点理解，其实可以认为是一个隐式合成的概念：如果 a 是一个复合图层，而且 b 在 a 上面，那么 b 也会被隐式转为一个复合图层，这点需要特别注意。
+
+## 答疑
+
+### 超过一屏，在滑动的过程中会不会触发重排，为什么？
+
+现代浏览器做了优化，把滚动操作交给了合成线程来处理，也就是说滚动的内容会被当成一个单独的图层，发生滚动的事件的时候，图层直接由合成线程来生成，也就是说这种情况下没有占用主线程，所以通常情况下不会产生重排和重回操作，只是简单合成就可以了，这样效率是最高的！
+
+为什么说“通常”呢？ 这是因为目前渲染流程还是很复杂的，在滚动页面时，有些情况下，如果合成线程搞不定的，那么还要交给主线程去处理，这时候就涉及到重拍了，不过技术是往前发展的，渲染流程会变得越来约简单高效！
+
+### 渲染进程里的帧的概念是什么样子的呢？
+
+可以拿放电影电影来解释，通常，电影的帧速是24，也就是说每秒切换24幅画面，其中的每幅画面就是一帧。
+
+理解什么是帧后，我们在回过头看看我们的页面。由于目前大多数设备的屏幕刷新率为 60 次/秒。因此，如果页面中有一个动画、或一个渐变效果、或者用户正在滚动页面，那么浏览器渲染动画的频率至少要和刷新频率保持一致，也就是每秒需要更新60次，这样我们就能计算出来生成每帧的预算只有（1/60）毫秒，也就是16毫秒多一点(1 秒/ 60 = 16.66 毫秒)。如果超过16毫秒，帧率将下降，并且会出现画面抖动现象，此现象通常被称为卡顿，会对用户体验产生负面影响。
+
+所以，如果想要保证画面的流畅，就需要尽量降低每帧的渲染时间，所以局部更新流水线显得非常重要了，能大大减少处理每帧所消耗的时间。
+
