--- a/06. 运行和监控/03. JS执行机制/01. 内存机制.md
+++ b/06. 运行和监控/03. JS执行机制/01. 内存机制.md
@@ -26,4 +26,6 @@
 
 - 引用类型：由于引用类型值大小不固定（比如上面的对象可以添加属性等），栈内存中存放地址指向堆内存中的对象，是通过引用来访问的。
 
+也就是说，JavaScript 的变量是没有数据类型的，值才有数据类型，变量可以随时持有任何类型的数据。
+
 因此总结来说：**栈内存中的基本类型，可以通过操作系统直接处理；而堆内存中的引用类型，正是由于可以经常变化，大小不固定，因此需要 JavaScript 的引擎通过垃圾回收机制来处理。**
