--- a/02. 语法和API/ES语法/01. 原型与原型链.md
+++ b/02. 语法和API/ES语法/01. 原型与原型链.md
@@ -8,39 +8,39 @@
 
 1. 概念： 用于创建对象的函数（实例化）。或者是，如果一个函数被设计出来用于通过 `new` 关键字创建对象，那么这个函数就是一个构造函数。
 
-  - 在JS中，构造函数只是使用 `new` 操作符时被调用的普通函数，他们不属于某个类，也不会实例化一个类。
+- 在 JS 中，构造函数只是使用 `new` 操作符时被调用的普通函数，他们不属于某个类，也不会实例化一个类。
 
-  - 包括内置对象函数（比如 `Number(..)`）在内的所有函数都可以用 `new` 来调用，这种函数调用被称为构造函数调用。
+- 包括内置对象函数（比如 `Number(..)`）在内的所有函数都可以用 `new` 来调用，这种函数调用被称为构造函数调用。
 
-  - 实际上并不存在所谓的“构造函数”，只有对于函数的“构造调用”。
+- 实际上并不存在所谓的“构造函数”，只有对于函数的“构造调用”。
 
 引用类型 `constructor` 属性值是可以修改的，但是对于基本类型来说是只读的，当然 `null` 和 `undefined` 没有 `constructor` 属性。
 
 2. 特征：
 
-  - 首字母大写，与普通函数进行区分；
+- 首字母大写，与普通函数进行区分；
 
-  - 使用 `new Fun()` 进行调用；
-  
-  - 构造函数调用后，返回一个对象；
-  
-  - 通常构造函数中不应该书写任何 `return` 语句；如果返回到值是数字、字符串、布尔值，直接忽略；如果返回的值是对象，则使用返回的对象；
-  
-  - 构造函数中的 `this` 指向实例对象；
+- 使用 `new Fun()` 进行调用；
+
+- 构造函数调用后，返回一个对象；
+
+- 通常构造函数中不应该书写任何 `return` 语句；如果返回到值是数字、字符串、布尔值，直接忽略；如果返回的值是对象，则使用返回的对象；
+
+- 构造函数中的 `this` 指向实例对象；
 
 3. 构造函数分为 实例成员 和 静态成员：
 
-  - 实例成员：实例成员就是在构造函数内部，通过 `this` 添加的成员。实例成员只能通过实例化的对象来访问。
-  
-  - 静态成员：在构造函数本身上添加的成员，只能通过构造函数来访问（构造函数的属性）。
+- 实例成员：实例成员就是在构造函数内部，通过 `this` 添加的成员。实例成员只能通过实例化的对象来访问。
+
+- 静态成员：在构造函数本身上添加的成员，只能通过构造函数来访问（构造函数的属性）。
 
 4. 实例对象的属性和方法是否共享
 
-  - 实例对象的属性存储的是如果存储的是基本类型，不存在共享问题，是否相同要看值内容。
-  
-  - 在构造函数上直接定义方法 —— 不共享 —— 浪费内存，影响性能
-  
-  - 通过原型添加方法 —— 共享
+- 实例对象的属性存储的是如果存储的是基本类型，不存在共享问题，是否相同要看值内容。
+
+- 在构造函数上直接定义方法 —— 不共享 —— 浪费内存，影响性能
+
+- 通过原型添加方法 —— 共享
 
 定义构造函数的规则：公共属性定义到构造函数里面，公共方法放在原型对象上。
 
@@ -57,7 +57,7 @@ Symbol(123); // Symbol(123)
 虽然是基本数据类型，但 `Symbol(123)` 实例可以获取 `constructor` 属性值。
 
 ```javaScript
-var sym = Symbol(123); 
+var sym = Symbol(123);
 console.log( sym ); // Symbol(123)
 
 console.log( sym.constructor ); // ƒ Symbol() { [native code] }
@@ -79,50 +79,52 @@ console.log( sym.constructor ); // ƒ Symbol() { [native code] }
 
 4.  执行构造函数中的代码（为这个新对象添加属性）
 
-5.  由构造函数返回的对象就是 `new` 表达式的结果。如果构造函数没有显式返回一个对象，则使用步骤1创建的对象。
+5.  由构造函数返回的对象就是 `new` 表达式的结果。如果构造函数没有显式返回一个对象，则使用步骤 1 创建的对象。
 
 ## `prototype` （原型/原型对象）
 
-1. 每个函数都有一个 `prototype` 属性，称为原型或者原型对象。`prototype` 的属性值对象有 `constructor` 属性和隐藏的 ` __proto__ ` 属性。`constructor` 的属性值指向这个函数本身， `prototype` 中的 `this` 指向实例化对象。
+1. 每个函数都有一个 `prototype` 属性，称为实例的原型或者原型对象。`prototype` 的属性值对象有 `constructor` 属性和隐藏的 `__proto__` 属性。`constructor` 的属性值指向这个函数本身， `prototype` 中的 `this` 指向实例化对象。
 
-2. 每个对象（包括函数）,即所有的引用类型（数组、对象、函数），都有一个隐藏的 ` __proto__ ` 属性，称为隐式原型。`__proto__` 的属性值引用了创建该对象的构造函数的 ` prototype ` 属性值。所有函数（包括构造函数）的 `__proto__` 都指向 `Function.prototype` 因为它们都是 `Function` 的实例。即：`fn.__proto__ === Fn.prototype`。
+2. 每个对象（包括函数）,即所有的引用类型（数组、对象、函数），都有一个隐藏的 `__proto__` 属性，称为隐式原型，这个属性会指向该对象的原型。`__proto__` 的属性值引用了创建该对象的构造函数的 `prototype` 属性值。所有函数（包括构造函数）的 `__proto__` 都指向 `Function.prototype` 因为它们都是 `Function` 的实例。即：`fn.__proto__ === Fn.prototype`。
 
 3. 一些细节
 
-  - 自定义函数的 `prototype` 本质上是被 `Object` 创建，所以自定义函数的 ` prototype` 的 `__proto__` 指向的就是 `Object.prototype` 。
+- 自定义函数的 `prototype` 本质上是被 `Object` 创建，所以自定义函数的 ` prototype` 的 `__proto__` 指向的就是 `Object.prototype` 。
 
-  - ❗️`Object.prototype` 的 `__proto__` 指向的是 `null`。
+- ❗️`Object.prototype` 的 `__proto__` 指向的是 `null`。
 
-  - `__proto__` 是一个隐藏的属性，`javascript` 不希望开发者用到这个属性值，有的低版本浏览器甚至不支持这个属性值。
+- `__proto__` 是一个隐藏的属性，`javascript` 不希望开发者用到这个属性值，有的低版本浏览器甚至不支持这个属性值。
 
-  - `__proto__` 是每个实例上都有的属性，`prototype` 是构造函数的属性，在实例上并不存在，所以这两个并不一样，但 `p.__proto__` 和 `Parent.prototype` 指向同一个对象。
+- `__proto__` 是每个实例上都有的属性，`prototype` 是构造函数的属性，在实例上并不存在，所以这两个并不一样，但 `p.__proto__` 和 `Parent.prototype` 指向同一个对象。
 
-  - `实例.constructor === 构造函数`。其实实例上并不是真正有 `constructor` 这个指针，它其实是从原型链上获取的。`instance.hasOwnProperty('constructor') === false`。
+- `实例.constructor === 构造函数`。其实实例上并不是真正有 `constructor` 这个指针，它其实是从原型链上获取的。`instance.hasOwnProperty('constructor') === false`。
+
+- ES5 可以获得对象的原型的方法 `Object.getPrototypeOf`。
 
 5. 在原型上添加方法需要注意的地方
 
-  - 通过 ``` 构造函数.prototype.方法 ``` 在原型对象上直接添加方法，此时的原型对象是有 ``` constructor构造器 ``` 的，构造器指向构造函数本身。
-  - 通过 ``` 构造函数.prototype = {...} ``` 给原型重新赋值，此时会丢失 ``` constructor构造器 ``` ，需要手动定义构造器，指回构造函数本身  
+- 通过 `构造函数.prototype.方法` 在原型对象上直接添加方法，此时的原型对象是有 `constructor构造器` 的，构造器指向构造函数本身。
+- 通过 `构造函数.prototype = {...}` 给原型重新赋值，此时会丢失 `constructor构造器` ，需要手动定义构造器，指回构造函数本身。
 
 ## 原型链
 
 `instanceof` 运算符用来检测构造函数的 `prototype` 是否存在于实例对象的原型链上。
 
-`instanceof` 运算符的第一个变量是一个对象，暂时称为A；第二个变量一般是一个函数，暂时称为B。即：`A (object) instanceof B (constructor)`
+`instanceof` 运算符的第一个变量是一个对象，暂时称为 A；第二个变量一般是一个函数，暂时称为 B。即：`A (object) instanceof B (constructor)`
 
 `instanceof` 的判断队则是：沿着 `A` 的 `__proto__` 这条线来找，同时沿着 `B` 的 `prototype` 这条线来找，如果两条线能找到同一个引用，即同一个对象，那么就返回 `true`。如果找到终点还未重合，则返回 `false`。
 
 `instanceof` 表示的就是一种继承关系，或者原型链的结构。
 
-访问一个对象的属性时，先在其自身的基本属性中查找，如果没有，再沿着 `__proto__` 这条链向上找，通过 ` __proto__ ` 指针指向上一层构造函数的原型 ，并从中继承方法和属性，同时原型对象也可能拥有原型，这样一层一层，最终指向 `null`，这就是原型链。
+访问一个对象的属性时，先在其自身的基本属性中查找，如果没有，再沿着 `__proto__` 这条链向上找，通过 `__proto__` 指针指向上一层构造函数的原型 ，并从中继承方法和属性，同时原型对象也可能拥有原型，这样一层一层，最终指向 `null`，这就是原型链。
 
-由` __proto__ ` 相互关联的原型组成的链状结构就是原型链。
+由`__proto__` 相互关联的原型组成的链状结构就是原型链。
 
 ![原型与原型链](./images/原型与原型链.png)
 
 ## null 究竟代表了什么
 
-> null 表示“没有对象”，即该处不应该有值。—— 阮一峰[《undefined与null的区别》](http://www.ruanyifeng.com/blog/2014/03/undefined-vs-null.html)
+> null 表示“没有对象”，即该处不应该有值。—— 阮一峰[《undefined 与 null 的区别》](http://www.ruanyifeng.com/blog/2014/03/undefined-vs-null.html)
 
 所以 `Object.prototype.__proto__` 的值为 `null` 跟 `Object.prototype` 没有原型，其实表达了一个意思。
 
@@ -130,7 +132,7 @@ console.log( sym.constructor ); // ƒ Symbol() { [native code] }
 
 [深入探究 Function & Object 鸡蛋问题](https://www.muyiy.cn/blog/5/5.3.html)
 
-[JavaScript深入之从原型到原型链](https://github.com/mqyqingfeng/Blog/issues/2)
+[JavaScript 深入之从原型到原型链](https://github.com/mqyqingfeng/Blog/issues/2)
 
 [深入理解 JavaScript 原型](https://mp.weixin.qq.com/s/1UDILezroK5wrcK-Z5bHOg)
 
