--- a/02. 语法和API/ES语法/02. 执行上下文.md
+++ b/02. 语法和API/ES语法/02. 执行上下文.md
@@ -14,25 +14,29 @@
 
 作用域最大的用处就是隔离变量，不同作用域下同名变量不会有冲突。
 
-## 执行上下文 —— 可执行代码
+## 执行上下文
 
-在一段 js 代码拿过来真正一句一句运行之前，浏览器已经做了一些“准备工作”：
+实际上变量和函数声明在代码里的位置是不会改变的，而且是在**编译阶段**被 `JavaScript` 引擎放入内存中。
 
-- 变量、函数表达式 —— 变量声明，默认赋值为`undefined`；
+- 变量提升：变量、函数表达式 —— 变量声明，默认赋值为`undefined`；
 
 - `this` —— 赋值；
 
-- 函数声明 —— 赋值。**函数在定义的时候确定函数体内部自由变量的作用域**。
+- 函数声明（通过 function 定义的函数） —— 赋值。**函数在定义的时候确定函数体内部自由变量的作用域**。
+
+在编译阶段，变量和函数会被存放到变量环境中；在代码执行阶段，`JavaScript` 引擎会从变量环境中去查找自定义的变量和函数。
 
 这些“准备工作”即为执行上下文[环境]，是当前 `JavaScript` 代码被解析和执行时所在环境的抽象概念。
+
+## 可执行代码
 
 `JavaScript` 的可执行代码(executable code)的类型有三种，全局代码、函数代码、eval 代码。
 
 当 `JavaScript` 代码执行一段可执行代码(executable code)时，会创建对应的执行上下文(execution context)。
 
-- 全局执行上下文：只有一个，浏览器中的全局对象就是 `window` 对象，`this` 指向这个全局对象。即全局执行上下文为手写文本到`<script>`标签里面的。
+- 全局执行上下文：当 `JavaScript` 执行全局代码的时候，会编译全局代码并创建全局执行上下文，而且在整个页面的生存周期内，全局执行上下文只有一份。浏览器中的全局对象就是 `window` 对象，`this` 指向这个全局对象。
 
-- 函数执行上下文：存在无数个，只有在函数被调用的时候才会被创建，每次**调用函数都会创建一个新的执行上下文**。
+- 函数执行上下文：存在无数个，只有在函数被调用的时候才会被创建，每次**调用函数都会创建一个新的执行上下文**。函数执行结束之后，创建的函数执行上下文会被销毁。
 
 - `Eval` 函数执行上下文： 指的是运行在 `eval` 函数中文本形式的代码，很少用而且不建议使用。
 
@@ -40,11 +44,11 @@
 
 ## 执行上下文栈
 
-执行上下文栈，也叫调用栈，具有 LIFO（后进先出）结构，用于存储在代码执行期间创建的所有执行上下文。
+执行上下文栈，也叫调用栈，调用栈就是用来管理执行上下文（函数调用关系）的一种数据结构。具有 LIFO（后进先出）结构，用于存储在代码执行期间创建的所有执行上下文。
 
-首次运行JS代码时，会创建一个全局执行上下文并Push到当前的执行上下文栈中。每当发生函数调用，引擎都会为该函数创建一个新的函数执行上下文并Push到当前执行上下文栈的栈顶。
+首次运行 `JS` 代码时，会创建一个全局执行上下文并 `Push` 到当前的执行上下文栈中。每当发生函数调用，引擎都会为该函数创建一个新的函数执行上下文并 `Push` 到当前执行上下文栈的栈顶。
 
-根据执行上下文栈LIFO规则，当栈顶函数运行完成后，其对应的函数执行上下文将会从执行上下文栈中Pop出，上下文控制权将移到当前执行上下文栈的下一个执行上下文。
+根据执行上下文栈 `LIFO` 规则，当栈顶函数运行完成后，其对应的函数执行上下文将会从执行上下文栈中 `Pop` 出，上下文控制权将移到当前执行上下文栈的下一个执行上下文。
 
 通俗而言：执行全局代码时，会产生一个执行上下文环境，每次调用函数都又会产生执行上下文环境。当函数调用完成时，这个上下文环境以及其中的数据都会被消除，再重新回到全局上下文环境。处于活动状态的执行上下文环境只有一个。
 
@@ -52,7 +56,13 @@
 
 ![执行上下文栈](./images/执行上下文栈.jpeg)
 
+调用栈是 `JavaScript` 引擎追踪函数执行的一个机制，当一次有多个函数被调用时，通过调用栈就能够追踪到哪个函数正在被执行以及各函数之间的调用关系。
 
+### 栈溢出（Stack Overflow）
+
+调用栈是有大小的，当入栈的执行上下文超过一定数目，`JavaScript` 引擎就会报错，把这种错误叫做栈溢出。
+
+特别是在写没有任何终止条件的递归代码的时候，就很容易出现栈溢出的情况。它会一直创建新的函数执行上下文，并反复将其压入栈中，但栈是有容量限制的，超过最大数量后就会出现栈溢出的错误。
 
 ## 从【自由变量】到【作用域链】
 
@@ -60,7 +70,7 @@
 
 在 A 作用域中使用的变量 x，却没有在 A 作用域中声明（即在其他作用域中声明的），对于 A 作用域来说，x 就是一个自由变量。
 
-自由变量要到创建这个函数的那个作用域中取值——是“创建”，而不是“调用”。—— 其实这就是所谓的“静态作用域”。
+自由变量要到创建这个函数的那个作用域中取值 —— 是“创建”，而不是“调用”。—— 其实这就是所谓的“静态作用域”。
 
 2. 作用域链： 取自由变量时的一步一步“跨”的路线
 
@@ -77,6 +87,12 @@
 作用域链和原型继承查找时的区别：如果去查找一个普通对象的属性，但是在当前对象和其原型中都找不到时，会返回 undefined；但查找的属性在作用域链中不存在的话就会抛出 ReferenceError。
 
 作用域链的顶端是全局对象，在全局环境中定义的变量就会绑定到全局对象中。
+
+## 词法作用域
+
+词法作用域就是指作用域是由代码中函数声明的位置来决定的，所以词法作用域是静态的作用域，通过它就能够预测代码在执行过程中如何查找标识符。
+
+词法作用域是代码阶段就决定好的，和函数是怎么调用的没有关系。
 
 [JavaScript深入之词法作用域和动态作用域](https://github.com/mqyqingfeng/Blog/issues/3)
 
