--- a/03. 网络和通讯/04. http/06. 浏览器缓存机制详解.md
+++ b/03. 网络和通讯/04. http/06. 浏览器缓存机制详解.md
@@ -256,3 +256,5 @@ cond4(no)->op6->e
 4. POST 请求无法被缓存
 
 5. HTTP 响应头中不包含 Last-Modified/Etag，也不包含 Cache-Control/Expires 的请求无法被缓存
+
+[深入理解浏览器的缓存机制](https://www.jianshu.com/p/54cc04190252)
