--- a/02. 语法和API/ES语法/00. 基础语法/09. 变量声明var、let、const详解.md
+++ b/02. 语法和API/ES语法/00. 基础语法/09. 变量声明var、let、const详解.md
@@ -1,6 +1,6 @@
 ## 概述
 
-`ES6` 发布前，`JavaScript` 只能通过 `var` 声明变量的方式，常量、块级变量、函数变量这些概念的差别都不能很好的体现出来，于此同时，加入你要使用或者提供一个 `API`，`var` 声明的变量可随时被修改和重新分配的问题，会让你时刻担心代码是否能正常运行。
+`ES6` 发布前，`JavaScript` 只能通过 `var` 声明变量的方式，常量、块级变量、函数变量这些概念的差别都不能很好的体现出来，于此同时，假如要使用或者提供一个 `API`，`var` 声明的变量可随时被修改和重新分配的问题，会让你时刻担心代码是否能正常运行。
 
 `ES6` 带来了 `let`、`const`，先来了解一下三个标识符的特征：
 
@@ -88,6 +88,10 @@ function f() { console.log('I am outside!'); }
 ```
 
 考虑到环境导致的行为差异太大，应该避免在块级作用域内声明函数。如果确实需要，也应该写成函数表达式，而不是函数声明语句。
+
+### 块级作用域原理
+
+在词法环境内部，维护了一个小型栈结构，栈底是函数最外层的变量，进入一个作用域块后，就会把该作用域块内部的变量压到栈顶；当作用域执行完成之后，该作用域的信息就会从栈顶弹出，这就是词法环境的结构。需要注意下，这里所讲的变量是指通过 `let` 或者 `const` 声明的变量。
 
 ## `let` 命令
 
