--- a/02. 语法和API/ES语法/02. 作用域和执行上下文栈.md
+++ b/02. 语法和API/ES语法/02. 作用域和执行上下文栈.md
@@ -4,11 +4,13 @@
 
 作用域规定了如何查找变量，也就是确定当前执行代码对变量的访问权限。
 
-`JavaScript` 采用词法作用域(lexical scoping)，也就是静态作用域。
+`JavaScript` 采用**词法作用域**(lexical scoping)，也就是**静态作用域**。
+
+词法作用域就是指作用域是由代码中函数声明的位置来决定的，所以词法作用域是静态的作用域，通过它就能够预测代码在执行过程中如何查找标识符。
+
+函数的作用域基于函数创建的位置，在函数定义的时候就决定了，和函数是怎么调用的没有关系。
 
 作用域其实可理解为该上下文中声明的变量和声明的作用范围。可分为 全局作用域、 函数作用域和块级作用域。
-
-函数的作用域基于函数创建的位置，在函数定义的时候就决定了。
 
 作用域有上下级的关系，上下级关系的确定就看函数是在哪个作用域下创建的。
 
@@ -63,36 +65,6 @@
 调用栈是有大小的，当入栈的执行上下文超过一定数目，`JavaScript` 引擎就会报错，把这种错误叫做栈溢出。
 
 特别是在写没有任何终止条件的递归代码的时候，就很容易出现栈溢出的情况。它会一直创建新的函数执行上下文，并反复将其压入栈中，但栈是有容量限制的，超过最大数量后就会出现栈溢出的错误。
-
-## 从【自由变量】到【作用域链】
-
-1. 什么是“自由变量”
-
-在 A 作用域中使用的变量 x，却没有在 A 作用域中声明（即在其他作用域中声明的），对于 A 作用域来说，x 就是一个自由变量。
-
-自由变量要到创建这个函数的那个作用域中取值 —— 是“创建”，而不是“调用”。—— 其实这就是所谓的“静态作用域”。
-
-2. 作用域链： 取自由变量时的一步一步“跨”的路线
-
-“作用域链”过程：
-
-- 第一步，现在当前作用域查找自由变量，如果有则获取并结束。如果没有则继续；
-
-- 第二步，如果当前作用域是全局作用域，则证明自由变量未定义，结束；否则继续；
-
-- 第三步，（不是全局作用域，那就是函数作用域）将创建该函数的作用域作为当前作用域；
-
-- 第四步，跳转到第一步。
-
-作用域链和原型继承查找时的区别：如果去查找一个普通对象的属性，但是在当前对象和其原型中都找不到时，会返回 undefined；但查找的属性在作用域链中不存在的话就会抛出 ReferenceError。
-
-作用域链的顶端是全局对象，在全局环境中定义的变量就会绑定到全局对象中。
-
-## 词法作用域
-
-词法作用域就是指作用域是由代码中函数声明的位置来决定的，所以词法作用域是静态的作用域，通过它就能够预测代码在执行过程中如何查找标识符。
-
-词法作用域是代码阶段就决定好的，和函数是怎么调用的没有关系。
 
 [JavaScript深入之词法作用域和动态作用域](https://github.com/mqyqingfeng/Blog/issues/3)
 
