--- a/02. 语法和API/ES语法/03. 变量对象和作用域链.md
+++ b/02. 语法和API/ES语法/03. 变量对象和作用域链.md
@@ -8,13 +8,13 @@
 
 2. 函数执行上下文
 
-在函数执行上下文中，变量对象（VO）是不能直接访问的，此时由活动对象（Activation Object）来表示变量对象（VO）。
+在函数执行上下文中，变量对象（VO）是不能直接访问的，此时由活动对象（Activation Object, AO）来表示变量对象（VO）。
 
 活动对象和变量对象其实是一个东西，只是变量对象是规范上的或者说是引擎实现上的，不可在 `JavaScript` 环境中访问，只有到当进入一个执行上下文中，这个执行上下文的变量对象才会开始创建，所以才叫 activation object ，而只有被创建的变量对象，也就是活动对象上的各种属性才能被访问。
 
 活动对象是在进入函数上下文时刻被创建的，它通过函数的 arguments 属性初始化。arguments 属性值是 Arguments 对象。提供给函数上下文中作为对象使用。
 
-## 执行过程
+### 执行过程
 
 执行上下文的代码会分成两个阶段进行处理：
 
@@ -25,7 +25,7 @@
 - 函数的所有形参 (如果是函数上下文)
 
   - 由名称和对应值组成的一个变量对象的属性被创建
-  
+
   - 没有实参，属性值设为 undefined
 
 - 函数声明
@@ -67,7 +67,7 @@ AO = {
     b: undefined,
     c: reference to function c(){},
     d: undefined
-}  
+}
 ```
 
 2. 代码执行
@@ -99,31 +99,215 @@ AO = {
 
 4. 在代码执行阶段，会再次修改变量对象的属性值
 
+### 思考题
+
+1. 第一题
+
+```javaScript
+function foo() {
+    console.log(a);
+    a = 1;
+}
+
+foo(); // ???
+
+function bar() {
+    a = 1;
+    console.log(a);
+}
+bar(); // ???
+```
+
+第一段会报错：Uncaught ReferenceError: a is not defined。
+
+第二段会打印：1。
+
+这是因为函数中的 "a" 并没有通过 var 关键字声明，所有不会被存放在 AO 中。
+
+第一段执行 console 的时候， AO 的值是：
+
+```javaScript
+AO = {
+    arguments: {
+        length: 0
+    }
+}
+```
+
+没有 a 的值，然后就会到全局去找，全局也没有，所以会报错。
+
+当第二段执行 console 的时候，全局对象已经被赋予了 a 属性，这时候就可以从全局找到 a 的值，所以会打印 1。
+
+2. 第二题
+
+```javaScript
+console.log(foo);
+
+function foo(){
+    console.log("foo");
+}
+
+var foo = 1;
+```
+
+会打印函数，而不是 undefined 。
+
+这是因为在进入执行上下文时，首先会处理函数声明，其次会处理变量声明，如果变量名称跟已经声明的形式参数或函数相同，则变量声明不会干扰已经存在的这类属性。
+
 ## 从【自由变量】到【作用域链】
 
-1. 什么是“自由变量”
+### 自由变量
 
 自由变量是指在函数中使用的，但既不是函数参数也不是函数的局部变量的变量。
 
-在A作用域中使用的变量x，却没有在A作用域中声明（即在其他作用域中声明的），对于A作用域来说，x就是一个自由变量。
+在 A 作用域中使用的变量 x，却没有在 A 作用域中声明（即在其他作用域中声明的），对于 A 作用域来说，x 就是一个自由变量。
 
 自由变量要到创建这个函数的那个作用域中取值 —— 是“创建”，而不是“调用”。—— 其实这就是所谓的“静态作用域”。
 
-2. 作用域链： 取自由变量时的一步一步“跨”的路线
+### 作用域链： 取自由变量时的一步一步“跨”的路线
 
 “作用域链”过程：
 
-  - 第一步，现在当前作用域查找自由变量，如果有则获取并结束。如果没有则继续；
+- 第一步，现在当前作用域查找自由变量，如果有则获取并结束。如果没有则继续；
 
-  - 第二步，如果当前作用域是全局作用域，则证明自由变量未定义，结束；否则继续；
+- 第二步，如果当前作用域是全局作用域，则证明自由变量未定义，结束；否则继续；
 
-  - 第三步，（不是全局作用域，那就是函数作用域）将创建该函数的作用域作为当前作用域；
+- 第三步，（不是全局作用域，那就是函数作用域）将创建该函数的作用域作为当前作用域；
 
-  - 第四步，跳转到第一步。
+- 第四步，跳转到第一步。
 
-作用域链和原型继承查找时的区别：如果去查找一个普通对象的属性，但是在当前对象和其原型中都找不到时，会返回undefined；但查找的属性在作用域链中不存在的话就会抛出ReferenceError。
+作用域链和原型继承查找时的区别：如果去查找一个普通对象的属性，但是在当前对象和其原型中都找不到时，会返回 undefined；但查找的属性在作用域链中不存在的话就会抛出 ReferenceError。
 
 作用域链的顶端是全局对象，在全局环境中定义的变量就会绑定到全局对象中。
+
+### 作用域链的创建和变化
+
+1. 函数创建
+
+函数的作用域在函数定义的时候就决定了，这是因为函数有一个内部属性 [[scope]]，当函数创建的时候，就会保存所有父变量对象到其中，你可以理解 [[scope]] 就是所有父变量对象的层级链，但是注意：[[scope]] 并不代表完整的作用域链！
+
+例子：
+
+```javaScript
+function foo() {
+    function bar() {
+        ...
+    }
+}
+```
+
+函数创建时，各自的[[scope]]为：
+
+```javaScript
+foo.[[scope]] = [
+  globalContext.VO
+];
+
+bar.[[scope]] = [
+    fooContext.AO,
+    globalContext.VO
+];
+```
+
+2. 函数激活
+
+当函数激活时，进入函数上下文，创建 VO/AO 后，就会将活动对象添加到作用链的前端。
+
+这时候执行上下文的作用域链，我们命名为 Scope：
+
+```javaScript
+Scope = [AO].concat([[Scope]]);
+```
+
+### 总结：函数执行上下文中作用域链和变量对象的创建过程
+
+```javaScript
+var scope = "global scope";
+function checkscope(){
+    var scope2 = 'local scope';
+    return scope2;
+}
+checkscope();
+```
+
+执行过程如下：
+
+1. `checkscope` 函数被创建，保存作用域链到 内部属性[[scope]]
+
+```javaScript
+checkscope.[[scope]] = [
+    globalContext.VO
+];
+```
+
+2. 执行 `checkscope` 函数，创建 `checkscope` 函数执行上下文，`checkscope` 函数执行上下文被压入执行上下文栈
+
+```javaScript
+ECStack = [
+    checkscopeContext,
+    globalContext
+];
+```
+
+3. `checkscope` 函数并不立刻执行，开始做准备工作，第一步：复制函数[[scope]]属性创建作用域链
+
+```javaScript
+checkscopeContext = {
+    Scope: checkscope.[[scope]],
+}
+```
+
+4. 第二步：用 `arguments` 创建活动对象，随后初始化活动对象，加入形参、函数声明、变量声明
+
+```javaScript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope2: undefined
+    }，
+    Scope: checkscope.[[scope]],
+}
+```
+
+5. 第三步：将活动对象压入 `checkscope` 作用域链顶端
+
+```javaScript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope2: undefined
+    },
+    Scope: [AO, [[Scope]]]
+}
+```
+
+6. 准备工作做完，开始执行函数，随着函数的执行，修改 AO 的属性值
+
+```javaScript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope2: 'local scope'
+    },
+    Scope: [AO, [[Scope]]]
+}
+```
+
+7. 查找到 scope2 的值，返回后函数执行完毕，函数上下文从执行上下文栈中弹出
+
+```javaScript
+ECStack = [
+    globalContext
+];
+```
+
+### 思考题
 
 ```javaScript
 function foo(){
@@ -139,14 +323,146 @@ foo()
 
 这段代码的执行流程：
 
-  - 1.  在创建 foo 的时候，作用域链已经预先包含了一个全局对象，并保存在内部属性 [[Scope]] 当中。
-  - 2.  执行 foo 函数，创建执行环境与活动对象后，取出函数的内部属性 [[Scope]] 构建当前环境的作用域链（取出后，只有全局变量对象，然后此时追加了一个它自己的活动对象）。
-  - 3.  执行过程中遇到了 fun，从而继续对 fun 使用上一步的操作。
-  - 4.  fun 执行结束，移出环境栈。foo 因此也执行完毕，继续移出。
-  - 5.  javscript 监听到 foo 没有被任何变量所引用，开始实施垃圾回收机制，清空占用内存。
+- 1.  在创建 foo 的时候，作用域链已经预先包含了一个全局对象，并保存在内部属性 [[Scope]] 当中。
+- 2.  执行 foo 函数，创建执行环境与活动对象后，取出函数的内部属性 [[Scope]] 构建当前环境的作用域链（取出后，只有全局变量对象，然后此时追加了一个它自己的活动对象）。
+- 3.  执行过程中遇到了 fun，从而继续对 fun 使用上一步的操作。
+- 4.  fun 执行结束，移出环境栈。foo 因此也执行完毕，继续移出。
+- 5.  javscript 监听到 foo 没有被任何变量所引用，开始实施垃圾回收机制，清空占用内存。
 
-[JavaScript深入之变量对象](https://github.com/mqyqingfeng/Blog/issues/5)
+## 详细解析执行上下文栈和执行上下文的具体变化过程
 
-[JavaScript深入之作用域链](https://github.com/mqyqingfeng/Blog/issues/6)
+```javaScript
+var scope = "global scope";
+function checkscope(){
+    var scope = "local scope";
+    function f(){
+        return scope;
+    }
+    return f();
+}
+checkscope();
+```
 
-[JavaScript深入之执行上下文](https://github.com/mqyqingfeng/Blog/issues/8)
+执行过程如下：
+
+1. 执行全局代码，创建全局执行上下文，全局上下文被压入执行上下文栈
+
+```javaScript
+ECStack = [
+    globalContext
+];
+```
+
+2. 1. 全局上下文初始化
+
+```javaScript
+globalContext = {
+    VO: [global],
+    Scope: [globalContext.VO],
+    this: globalContext.VO
+}
+```
+
+2. 2. 初始化的同时，`checkscope` 函数被创建，保存作用域链到函数的内部属性[[scope]]
+
+```javaScript
+checkscope.[[scope]] = [
+    globalContext.VO
+];
+```
+
+3. 执行 `checkscope` 函数，创建 `checkscope` 函数执行上下文，`checkscope` 函数执行上下文被压入执行上下文栈
+
+```javaScript
+ECStack = [
+    checkscopeContext,
+    globalContext
+];
+```
+
+4. `checkscope` 函数执行上下文初始化：
+
+-   复制函数 [[scope]] 属性创建作用域链，
+
+-   用 `arguments` 创建活动对象，
+
+-   初始化活动对象，即加入形参、函数声明、变量声明，
+
+-   将活动对象压入 `checkscope` 作用域链顶端。
+
+同时 `f` 函数被创建，保存作用域链到 `f` 函数的内部属性[[scope]]
+
+```javaScript
+checkscopeContext = {
+    AO: {
+        arguments: {
+            length: 0
+        },
+        scope: undefined,
+        f: reference to function f(){}
+    },
+    Scope: [AO, globalContext.VO],
+    this: undefined
+}
+```
+
+5. 执行 `f` 函数，创建 `f` 函数执行上下文，`f` 函数执行上下文被压入执行上下文栈
+
+```javaScript
+ECStack = [
+    fContext,
+    checkscopeContext,
+    globalContext
+];
+```
+
+6. `f` 函数执行上下文初始化, 以下跟第 4 步相同：
+
+- 复制函数 [[scope]] 属性创建作用域链
+
+- 用 `arguments` 创建活动对象
+
+- 初始化活动对象，即加入形参、函数声明、变量声明
+
+- 将活动对象压入 `f` 作用域链顶端
+
+```javaScript
+fContext = {
+    AO: {
+        arguments: {
+            length: 0
+        }
+    },
+    Scope: [AO, checkscopeContext.AO, globalContext.VO],
+    this: undefined
+}
+```
+
+7. `f` 函数执行，沿着作用域链查找 `scope` 值，返回 `scope` 值
+
+8. `f` 函数执行完毕，`f` 函数上下文从执行上下文栈中弹出
+
+```javscript
+ECStack = [
+    checkscopeContext,
+    globalContext
+];
+```
+
+9. `checkscope` 函数执行完毕，`checkscope` 执行上下文从执行上下文栈中弹出
+
+```javaScript
+ECStack = [
+    globalContext
+];
+```
+
+
+
+
+
+[JavaScript 深入之变量对象](https://github.com/mqyqingfeng/Blog/issues/5)
+
+[JavaScript 深入之作用域链](https://github.com/mqyqingfeng/Blog/issues/6)
+
+[JavaScript 深入之执行上下文](https://github.com/mqyqingfeng/Blog/issues/8)
