--- a/面试/筛选.md
+++ b/面试/筛选.md
@@ -1,83 +1,64 @@
-[最新的前端大厂面经（详解答案）](https://juejin.cn/post/7004638318843412493)
-[史上最详细的经典面试题 从输入URL到看到页面发生了什么？](https://juejin.cn/post/6844903832435032072)
+
+## CSS
+
+盒子模型，以及标准情况和 IE 下的区别
+CSS 选择器有哪些
+em 和 px 的区别
+介绍 position 属性包括 CSS3 新增
+介绍 css，xsrf
+清除浮动
+
+介绍 flex 布局
+rem、flex 的区别（root em）
+介绍 css3 中 position:sticky
+定位问题（绝对定位、相对定位等）
+transform 动画和直接使用 left、top 改变位置有什么优缺点
+居中为什么要使用 transform（为什么不使用 marginLeft/Top）
+上下固定，中间滚动布局如何实现
+其他 css 方式设置垂直居中
+div 垂直水平居中（flex、绝对定位）
+两个元素块，一左一右，中间相距 10 像素
+如何实现高度自适应
+如何实现 H5 手机端的适配
+移动端适配 1px 的问题
+动画的了解
 
 
+## JavaScript
 
-**如何去除url中的#号**
-JS是什么范式语言(面向对象还是函数式编程)
-ES6中let块作用域是怎么实现的
-介绍暂时性死区
-let、const以及var的区别
-JS变量类型分为几种，区别是什么
-介绍JS数据类型，基本数据类型和引用数据类型的区别
-数据类型分别存在哪里
-== 和 ===的区别，什么情况下用相等==
-变量a和b，如何交换
-
-some、every、find、filter、map、forEach有什么区别
-Array是Object类型吗
-多个标签生成的Dom结构是一个类数组
-类数组和数组的区别
-dom的类数组如何转成数组
-
-介绍纯函数
-
-介绍ES6的功能
-ES6使用的语法
-ES6新的特性
-ES5和ES6有什么区别
-
-介绍class和ES5的类以及区别
+介绍 ES6 的功能
+ES6 使用的语法
+ES6 新的特性
+ES5 和 ES6 有什么区别
+介绍 class 和 ES5 的类以及区别
 介绍箭头函数和普通函数的区别
-ES6中的map和原生的对象有什么区别
-
-介绍defineProperty方法，什么时候需要用到
-for..in 和 object.keys的区别
-
-
-
-
-
-
+ES6 中的 map 和原生的对象有什么区别
+介绍 defineProperty 方法，什么时候需要用到
+for..in 和 object.keys 的区别
 添加原生事件不移除为什么会内存泄露
 还有哪些地方会内存泄露
-setInterval需要注意的点
-定时器为什么是不精确的
-setTimeout(1)和setTimeout(2)之间的区别
-
-
-
-JS里垃圾回收机制是什么，常用的是哪种，怎么处理的
+JS 里垃圾回收机制是什么，常用的是哪种，怎么处理的
 介绍垃圾回收
 垃圾回收时栈和堆的区别
 栈和堆具体怎么存储
-栈和堆的区别 * 2
-
-
-
+栈和堆的区别
 变量作用域链
-词法作用域和this的区别
-介绍this各种情况
-bind、call、apply的区别 * 3
+词法作用域和 this 的区别
 两个对象如何比较  
 如何判断一个变量是不是数组
-介绍箭头函数的this
-介绍this和原型
-
-JS的原型
+介绍箭头函数的 this
+介绍 this 和原型
+JS 的原型
 介绍下原型链（解决的是继承问题吗）
-prototype和——proto——区别
-_construct是什么
-new是怎么实现的
+prototype 和——proto——区别
+new 是怎么实现的
 介绍原型链
 如何继承
 平常是怎么做继承
-JS的继承方法
-JS继承方案
+JS 的继承方法
+JS 继承方案
 使用原型最大的好处
-
-
-sum(2, 3)实现sum(2)(3)的效果    闭包
+sum(2, 3)实现 sum(2)(3)的效果
 取数组的最大值（ES5、ES6）
 对闭包的看法，为什么要用闭包
 说一下闭包
@@ -89,147 +70,506 @@ sum(2, 3)实现sum(2)(3)的效果    闭包
 工程中闭包使用场景
 介绍闭包，使用场景
 使用闭包特权函数的使用场景
-
-
-
-
 如何处理异常捕获
-promise、async有什么区别
-介绍下Promise，内部实现
-介绍Promise，异常捕获
-对async、await的理解，内部原理
-如何设计Promise.all()
+promise、async 有什么区别
+介绍下 Promise，内部实现
+介绍 Promise，异常捕获
+对 async、await 的理解，内部原理
+如何设计 Promise.all()
 介绍各种异步方案
-使用Async会注意哪些东西
-Async里面有多个await请求，可以怎么优化（请求是否有依赖）
-Promise和Async处理失败的时候有什么区别
-介绍下Promise的用途和性质
-Promise和Callback有什么区别
-介绍Promise
-Promise有几个状态
-promise的精髓，以及优缺点
-Promise如何实现的
-JS怎么实现异步
+使用 Async 会注意哪些东西
+Async 里面有多个 await 请求，可以怎么优化（请求是否有依赖）
+Promise 和 Async 处理失败的时候有什么区别
+介绍下 Promise 的用途和性质
+Promise 和 Callback 有什么区别
+介绍 Promise
+Promise 有几个状态
+promise 的精髓，以及优缺点
+Promise 如何实现的
+JS 怎么实现异步
 异步整个执行周期
-Promise的三种状态
-Async/Await怎么实现
-Promise和setTimeout执行先后的区别
-JS为什么要区分微任务和宏任务
-Promise构造函数是同步还是异步执行，then呢
-a，b两个按钮，点击aba，返回顺序可能是baa，如何保证是aba（Promise.then）
-Promise.all实现原理
-介绍Promise的特性，优缺点
-介绍异步方案 * 2
-promise如何实现then处理
+Promise 的三种状态
+Async/Await 怎么实现
+Promise 和 setTimeout 执行先后的区别
+JS 为什么要区分微任务和宏任务
+Promise 构造函数是同步还是异步执行，then 呢
+a，b 两个按钮，点击 aba，返回顺序可能是 baa，如何保证是 aba（Promise.then）
+Promise.all 实现原理
+介绍 Promise 的特性，优缺点
+介绍异步方案
+promise 如何实现 then 处理
 介绍宏任务和微任务
-promise里面和then里面执行有什么区别
-介绍Promise和then
-Promise 和 async/await 和 callback的区别
-Promise有没有解决异步的问题（promise链是真正强大的地方）
-Promise和setTimeout的区别（Event Loop）
-
-
+promise 里面和 then 里面执行有什么区别
+介绍 Promise 和 then
+Promise 和 async/await 和 callback 的区别
+Promise 有没有解决异步的问题（promise 链是真正强大的地方）
+Promise 和 setTimeout 的区别（Event Loop）
 深拷贝和浅拷贝
-loadsh深拷贝实现原理
+loadsh 深拷贝实现原理
 浅拷贝和深拷贝的区别
-怎么实现this对象的深拷贝
-
-
-
+手写深拷贝，拷贝元素囊括对象、数组、日期、正则、DOM 树。
+怎么实现 this 对象的深拷贝
 搜索请求如何处理（防抖）
 防抖和节流的区别
-
-
-
 浏览器事件流向
 介绍事件代理以及优缺点
-  React组件中怎么做事件代理
-  React组件事件代理的原理
 介绍下事件代理，主要解决什么问题
-JS执行过程中分为哪些阶段
+JS 执行过程中分为哪些阶段
 事件委托
 
-
-
-
-
-常见Http请求头
-介绍http2.0
-http1.1时如何复用tcp连接
-通过什么做到并发请求
-介绍service worker
-tcp3次握手
-tcp属于哪一层（1 物理层 -> 2 数据链路层 -> 3 网络层(ip)-> 4 传输层(tcp) -> 5 应用层(http)）
-http缓存控制
-介绍下HTTP状态码
-403、301、302是什么
-304是什么
-缓存相关的HTTP请求头
-介绍HTTPS
-HTTPS怎么建立安全通道
-并发请求资源数上限（6个）
-异步请求，低版本fetch如何低版本适配
-网络的五层模型
-HTTP和HTTPS的区别
-HTTPS的加密过程
-介绍SSL和TLS
+[1, 2, 3, 4, 5]变成[1, 2, 3, a, b, 5]
+上述数组随机取数，每次返回的值都不一样
+如何找0-5的随机数，95-99呢
+页面上有1万个button如何绑定事件
+如何判断是button
+页面上生成一万个button，并且绑定事件，如何做（JS原生操作DOM）
+循环绑定时的index是多少，为什么，怎么解决
+页面上有一个input，还有一个p标签，改变input后p标签就跟着变化，如何处理
+监听input的哪个事件，在什么时候触发
 
 如何解决跨域的问题
 表单可以跨域吗
 对跨域的了解
 介绍下浏览器跨域
 怎么去解决跨域问题
-jsonp方案需要服务端怎么配合
-Ajax发生跨域要设置什么（前端）
-加上CORS之后从发起到请求正式成功的过程
-xsrf跨域攻击的安全性问题怎么防范
+jsonp 方案需要服务端怎么配合
+Ajax 发生跨域要设置什么（前端）
+加上 CORS 之后从发起到请求正式成功的过程
+xsrf 跨域攻击的安全性问题怎么防范
 介绍下跨域
-ajax如何处理跨域
-CORS如何设置
-jsonp为什么不支持post方法
+ajax 如何处理跨域
+CORS 如何设置
+jsonp 为什么不支持 post 方法
 介绍同源策略
+如何设计一个 localStorage，保证数据的实效性
+localStorage和cookie有什么区别
+介绍DNS解析
+cookie的引用为了解决什么问题
+cookie和localStorage的区别
+介绍localstorage的API
+手写数组去重函数
+手写数组扁平化函数
+
+前后端通信使用什么方案
+RESTful常用的Method
+Access-Control-Allow-Origin在服务端哪里配置
+csrf跨站攻击怎么解决
+前端和后端怎么联调
+
+## 框架
+
+### Webpack
+
+使用过 webpack 里面哪些 plugin 和 loader
+webpack 里面的插件是怎么实现的
+dev-server是怎么跑起来
+项目优化
+抽取公共文件是怎么配置的
+如何做工程上的优化
+webpack生命周期
+webpack打包的整个过程
+常用的plugins
+一般怎么组织CSS（Webpack）
+webpack如何配sass，需要配哪些loader
+配css需要哪些loader
+如何配置把js、css、html单独打包成一个文件
+webpack和gulp的优缺点
+如何实现异步加载
+如何实现分模块打包（多入口）
+前端性能优化（1js css；2 图片；3 缓存预加载； 4 SSR； 5 多域名加载；6 负载均衡）
+base64为什么能提升性能，缺点
+介绍webp这个图片文件格式
+打包时Hash码是怎么生成的
+随机值存在一样的情况，如何避免
+  使用webpack构建时有无做一些自定义操作
+  webpack做了什么
+  node接口转发有无做什么优化
+  node起服务如何保证稳定性，平缓降级，重启等
+什么是单页项目
+介绍单页面应用和多页面应用
+项目如何管理模块
+
+### 路由
+
+路由的动态加载模块
+介绍路由的history
+前端怎么控制管理路由
+使用路由时出现问题如何解决
+
+### React
+
+React 组件中怎么做事件代理
+React 组件事件代理的原理
+React声明周期及自己的理解
+如何配置React-Router
+介绍react优化
+React怎么做数据的检查和变化
+react异步渲染的概念,介绍Time Slicing 和 Suspense
+16.X声明周期的改变
+16.X中props改变后在哪个生命周期中处理
+介绍JSX
+介绍虚拟DOM
+介绍高阶组件
+react性能优化
+react生命周期
+介绍Fiber
+介绍DOM树对比
+react中的key的作用
+shouldComponentUpdate是为了解决什么问题
+如何解决props层级过深的问题
+react生命周期，常用的生命周期
+对应的生命周期做什么事
+遇到性能问题一般在哪个生命周期里解决
+怎么做性能优化（异步加载组件...）
+写react有哪些细节可以优化
+React的事件机制（绑定一个事件到一个组件上）
+React子父组件之间如何传值
+介绍下React高阶组件，和普通组件有什么区别
+一个对象数组，每个子对象包含一个id和name，React如何渲染出全部的name
+在哪个生命周期里写
+其中有几个name不存在，通过异步接口获取，如何做
+渲染的时候key给什么值，可以使用index吗，用id好还是index好
+对React看法，有没有遇到一些坑
+React生命周期
+React的生命周期
+componentWillReceiveProps的触发条件是什么
+React16.3对生命周期的改变
+介绍下React的Filber架构
+画Filber渲染树
+介绍React高阶组件
+父子组件之间如何通信
+React-Router版本号
+React声明周期
+React使用过的一些组件
+React中setState后发生了什么
+  setState为什么默认是异步
+  setState什么时候是同步的
+为什么3大框架出现以后就出现很多native（RN）框架（虚拟DOM）
+虚拟DOM主要做了什么
+虚拟DOM本身是什么（JS对象）
+react设计思路
+为什么虚拟DOM比真实DOM性能好
+react常见的通信方式
+react生命周期
+react性能优化
+介绍pureComponet
+介绍Function Component
+React数据流
+props和state的区别
+介绍react context
+重新渲染render会做些什么
+哪些方法会触发react重新渲染
+state和props触发更新的生命周期分别有什么区别
+setState是同步还是异步
+对无状态组件的理解
+对react看法，它的优缺点
+使用过程中遇到的问题，如何解决的
+react的理念是什么（拿函数式编程来做页面渲染）
+介绍Immuable
+服务端渲染SSR
+
+
+### Redux
+
+介绍Redux数据流的流程
+Redux如何实现多个组件之间的通信，多个组件使用相同状态如何进行管理
+多个组件之间如何拆分各自的state，每块小的组件有自己的状态，它们之间还有一些公共的状态需要维护，如何思考这块
+使用过的Redux中间件
+介绍redux，主要解决什么问题
+redux请求中间件如何处理并发
+redux的设计思想
+接入redux的过程
+绑定connect的过程
+connect原理
+如何设计状态树
+Redux在状态管理方面解决了React本身不能解决的问题
+Redux有没有做过封装
+Redux怎么实现属性传递，介绍下原理
+Redux状态管理器和变量挂载到window中有什么区别
+介绍下redux整个流程原理
+介绍redux接入流程
+rudux和全局管理有什么区别（数据可控、数据响应）
+redux状态树的管理
+redux整体的工作流程
+redux和全局对象之间的区别
+Redux数据回溯设计思路
+
+## 前端性能优化
+
+网站SEO怎么处理
+前端性能优化（JS原生和React）
+用户体验做过什么优化
+
+## 业务场景
+
+
+pureComponent和FunctionComponent区别
+对安全有什么了解
+介绍下数字签名的原理
+
+项目中如何应用数据结构
+前端怎么做单元测试
+
+文件上传如何做断点续传
+搜索请求中文如何请求
+项目中如何处理安全问题
+小程序里面开页面最多多少
+
+Emit事件怎么发，需要引入什么
+
+数组里面有10万个数据，取第一个元素和第10万个元素的时间相差多少
+
+遇到的复杂业务场景
+工作收获
 
 
 
+## HTTP
+
+常见 Http 请求头
+介绍 http2.0
+http1.1 时如何复用 tcp 连接
+通过什么做到并发请求
+介绍 service worker
+tcp3 次握手
+tcp 属于哪一层（1 物理层 -> 2 数据链路层 -> 3 网络层(ip)-> 4 传输层(tcp) -> 5 应用层(http)）
+http 缓存控制
+介绍下 HTTP 状态码
+403、301、302 是什么
+304 是什么
+缓存相关的 HTTP 请求头
+介绍 HTTPS
+HTTPS 怎么建立安全通道
+并发请求资源数上限（6 个）
+异步请求，低版本 fetch 如何低版本适配
+网络的五层模型
+HTTP 和 HTTPS 的区别
+HTTPS 的加密过程
+介绍 SSL 和 TLS
+get和post有什么区别
+
+
+## 服务端
+
+介绍koa2
+koa2中间件原理
+常用的中间件
+使用过的koa2中间件
+koa-body原理
+koa原理，为什么要用koa(express和koa对比)
+使用的koa中间件
+介绍自己写过的中间件
+
+服务端怎么做统一的状态处理
+如何对相对路径引用进行优化
+node文件查找优先级
+npm2和npm3+有什么区别
+
+进程和线程的区别（一个node实例就是一个进程，node是单线程，通过事件循环来实现异步）
 
 
 
-如何设计一个localStorage，保证数据的实效性
+## 设计模式
+
+介绍观察者模式
+介绍中介者模式
+观察者和订阅-发布的区别，各自用在哪里
+
+前端开发中用到哪些设计模式
+React/Redux中哪些功能用到了哪些设计模式
+单例、工厂、观察者项目中实际场景
+项目中树的使用场景以及了解
+介绍下观察者模式
+观察者模式里面使用的数据结构(不具备顺序 ，是一个list)
+
+## 算法
+
+介绍冒泡排序，选择排序，冒泡排序如何优化
+如何判断链表是否有环
+介绍二叉搜索树的特点
+介绍排序算法和快排原理
+介绍快速排序
+算法：前K个最大的元素
+介绍下DFS深度优先
 
 
+### 选择排序
 
+```javascript
+function selectionSort(arr) {
+  var len = arr.length;
+  var minIndex, temp;
+  for (var i = 0; i < len - 1; i++) {
+    minIndex = i;
+    for (var j = i + 1; j < len; j++) {
+      if (arr[j] < arr[minIndex]) {
+        //寻找最小的数
+        minIndex = j; //将最小数的索引保存
+      }
+    }
+    temp = arr[i];
+    arr[i] = arr[minIndex];
+    arr[minIndex] = temp;
+  }
+  return arr;
+}
+```
 
+### 二分查找算法
 
+```javascript
+function binarySearch(data, item, start, end) {
+  var end = end || data.length - 1;
+  var start = start || 0;
+  var m = Math.floor((start + end) / 2);
+  if (item === data[m]) {
+    return m;
+  } else if (item < data[m]) {
+    return binarySearch(data, item, start, m - 1); //递归调用
+  } else {
+    return binarySearch(data, item, m + 1, end);
+  }
+  return false;
+}
+```
 
+### 归并算法
 
-盒子模型，以及标准情况和IE下的区别
-CSS选择器有哪些
-em和px的区别
-介绍position属性包括CSS3新增
-介绍css，xsrf 
-清除浮动
+```javascript
+function merge(left, right) {
+  var tmp = [];
 
-介绍flex布局
-rem、flex的区别（root em）
-介绍css3中position:sticky
-定位问题（绝对定位、相对定位等）
-transform动画和直接使用left、top改变位置有什么优缺点
-居中为什么要使用transform（为什么不使用marginLeft/Top）
-    使用过webpack里面哪些plugin和loader
-    webpack里面的插件是怎么实现的
+  while (left.length && right.length) {
+    if (left[0] < right[0]) tmp.push(left.shift());
+    else tmp.push(right.shift());
+  }
 
-上下固定，中间滚动布局如何实现
-其他css方式设置垂直居中
-div垂直水平居中（flex、绝对定位）
-两个元素块，一左一右，中间相距10像素
+  return tmp.concat(left, right);
+}
 
-如何实现高度自适应
-如何实现H5手机端的适配
-移动端适配1px的问题
+function mergeSort(a) {
+  if (a.length === 1) return a;
 
+  var mid = ~~(a.length / 2),
+    left = a.slice(0, mid),
+    right = a.slice(mid);
 
+  return merge(mergeSort(left), mergeSort(right));
+}
+```
 
+### 快速排序
 
+```javascript
+const quickSort = (arr) => {
+  let left = 0;
+  let right = arr.length - 1;
+  whlie(left < right) {
+    while(arr[right] >= arr[0] && left < right){
+      right -= 1
+    }
+    while(arr[left] <= arr[0] && left < right) {
+      left++;
+    }
+    if (right === left) {
+      let mid=arr[right];
+      arr[right]=arr[0];
+      arr[0]=mid;
+      break;
+    }
+      // 当左指针小于右指针的位置，交换两个指针当前位置的元素
+    let tem=arr[right];
+    arr[right]=arr[left];
+    arr[left]=tem;
+  }
+  return quickSort(arr.slice(0,left)).concat(arr.slice(left,right+1)).concat(quickSort(arr.slice(right+1)));
+}
+```
 
+### 回文算法
 
+```javascript
+function palindrome(str) {
+  var newstr = str.replace(/[^0-9a-z]/gi, "");
+  newstr = newstr.toLowerCase();
+  for (var i = 0, j = newstr.length - 1; i < j; i++, j--) {
+    if (newstr.charAt(i) !== newstr.charAt(j)) {
+      return false; //逐个字符比较，不匹配返回false
+    }
+  }
+  return true;
+}
+```
 
+### 节流函数
+
+```javascript
+function throttle(method, delay, duration) {
+  var timer = null;
+  var begin = new Date();
+  return function () {
+    var context = this,
+      args = arguments;
+    var current = new Date();
+    clearTimeout(timer);
+    if (current - begin >= duration) {
+      method.apply(context, args);
+      begin = current;
+    } else {
+      timer = setTimeout(function () {
+        method.apply(context, args);
+      }, delay);
+    }
+  };
+}
+
+// 函数消抖
+function debounce(method, context) {
+  clearTimeout(method.tId);
+  method.tId = setTimeout(function () {
+    method.call(context);
+  }, 300);
+}
+function debounce(method, delay) {
+  var timer = null;
+  return function () {
+    var context = this,
+      args = arguments;
+    clearTimeout(timer);
+    timer = setTimeout(function () {
+      method.apply(context, args);
+    }, delay);
+  };
+}
+
+const throttle = (method, delay, duration) => {
+  const date = new Date();
+  let timer = null;
+  return function (...arg) {
+    const current = new Date();
+    clearTimeOut(timer);
+    if (current - data >= duration) {
+      method.apply(this, arg);
+      date = current;
+    }
+    timer = setTimeOut(() => {
+      method.apply(this, arg);
+    }, delay);
+  };
+};
+```
+
+### IndexOf 的实现
+
+```javascript
+function ArrayIndexOf(arr, value, n) {
+  var i = isNaN(n) ? 0 : n; //有第三参时
+  i = i < 0 ? arr.length + i : i; //第三参为负数时
+  for (i; i < arr.length; i++) {
+    if (arr[i] === value) {
+      return i;
+    }
+  }
+  return -1;
+}
+```
