--- a/面试/面经.md
+++ b/面试/面经.md
@@ -1,7 +1,5 @@
 [阿里社招两年前端面经](https://juejin.cn/post/7007991848308310024?utm_source=gold_browser_extension)
 
-[最新的前端大厂面经（详解答案）](https://juejin.cn/post/7004638318843412493?utm_source=gold_browser_extension)
-
 [中高级前端大厂面试秘籍，为你保驾护航金三银四，直通大厂(上)](https://juejin.cn/post/6844903776512393224)
 
 [(中篇)中高级前端大厂面试秘籍，寒冬中为您保驾护航，直通大厂](https://juejin.cn/post/6844903801153945608)
@@ -11,3 +9,9 @@
 [关于面试这件事](https://juejin.cn/post/7029864660169916447)
 
 [面试复盘（一）：面试官「前阿里大佬」果然厉害](https://juejin.cn/post/6936843243489329165)
+
+[记一次腾讯社招前端面试（已拿到offer入职）](https://mp.weixin.qq.com/s/_FHoz1Jjfpnsdc0dysyQwQ)
+
+[最新的前端大厂面经（详解答案）](https://juejin.cn/post/7004638318843412493)
+
+[史上最详细的经典面试题 从输入URL到看到页面发生了什么？](https://juejin.cn/post/6844903832435032072)
