--- a/面试/简历.md
+++ b/面试/简历.md
@@ -1,88 +1,126 @@
 ### 个人信息
 
-| 姓名：张恩豪 | 电话：15611378127 |邮箱：13453727099@163.com |
-| :- | :- |:-|
+姓名：张恩豪
+电话：15611378127
+邮箱：13453727099@163.com
 
 ### 专业技能
 
-- 熟练掌握 HTML 和 CSS，了解语义化标签、布局方式、响应式设计以及浏览器兼容性问题。
-- 熟练使用 ES6+ 和 Typescript，了解 ECMAScript 标准，能够编写高效、可维护的代码。
-- 熟悉并掌握主流前端框架和库，如 React、Vue，了解其原理和使用方法。
-- 熟悉前端构建工具如 Webpack、vite 等，可以熟练进行模块化和组件化开发。
-- 了解 HTTP 协议，具备前端性能优化的能力。
-- 熟练使用 Git 进行版本控制，熟悉团队协作和代码合并的流程。
-- 熟悉 RESTful API 设计规范，具备调用后端接口的能力，可以高效与后端团队协作。
-- 了解过小程序开发、Python 等等。
+-   扎实的 HTML、CSS、JavaScript 基础，可以快速高效开发项目，处理浏览器兼容问题。
+-   熟练使用 ES6+ 和 Typescript，了解 ECMAScript 标准，能够编写高效、可维护的代码。
+-   丰富的 React + Ant Design + TypeScript + TailwindCSS / unocss 开发经验，对 React 底层源码原理和性能优化有深入学习和研究。
+-   丰富的 Vue + Ant Design Vue + TypeScript + TailwindCSS / unocss 开发经验，对 Vue 底层源码原理和性能优化有深入学习和研究。
+-   熟练使用 Webpack、Vite 构建工具，了解 Webpack、Vite 底层运行机制和优化策略。
+-   微前端使用过 qiankun，熟悉各微前端方案优劣势，了解 qiankun 实现原理。
+-   拥有小程序和公众号开发经验，并使用跨平台框架 Taro 做过中大型小程序。
+-   拥有流程图编辑器开发经验，并使用 LogicFlow 实际项目开发经验。
+-   了解 HTTP 协议，具备前端性能优化的能力。
+-   熟练使用 Git 进行版本控制，熟悉团队协作和代码合并的流程。
+-   熟悉 RESTful API 设计规范，具备调用后端接口的能力，可以高效与后端团队协作。
 
 ### 项目经历
 
+#### 群团上云
+
+一．项目简介：供公司管理人员发布管理运营商福利和社会公益帮扶管理系统。
+二．项目职责：负责开发运营商福利管理模块和移动端使用模块，以及社会公益相关预算审核和管理模块。
+三．技术栈：Vue3 + Vue Router + TypeScript + Lodash + Vite + Taro。
+四．技术实现：
+
+1. 基于小诺管理后台系统二次快速高效开发前端页面。
+2. 二次封装 AntdV 的附件上传组件，实现附件上传定制化展示、附件上传进度条、附件上传后只读展示。
+3. 基于 AntdV 表格组件封装首行可搜索表格、关联表格等组件，实现表格组件首行为搜索表单，表格高度自适应、首行冻结等功能。
+4. 使用 Taro 开发企业微信 H5 页面，实现根据配置文件动态渲染组件，使页面可配置。
+
+#### 云管理平台
+
+一．项目简介：在自研云管理运维平台基础上进行技术升级迭代，根据客户需要进行定制化开发。
+二．项目职责：负责项目技术调研，难点攻克以及性能优化。
+三．技术栈：Vue3 + Vue Router + TypeScript + Lodash + Vite。
+四．技术实现：
+
+1. 基于 Vben Admin 二次快速高效开发前端页面。
+2. 封装 Select 组件实现 option 分页展示。
+3. 利用 nginx 根目录部署基座项目，子目录部署子应用解决因为 Vite 没有类似 Webpack 的运行时的 publicPath 导致静态资源 404 问题。
+4. 核心组件和函数开发，封装多个自定义 hook 实现人员选择、关联表格等业务组件。
+
 #### 自动化运维平台
 
-公司存在多个产品线，客户在使用过程中需要分别进行登录，用户体验差。同时产品功能需要迭代拓展，所以进行了一系列代码层面的改进，优化了用户体验。
+一．项目简介：自研云管理运维平台，微前端项目，支持拖拽生成页面和流程编辑器
+二．项目职责：负责项目技术调研和搭建，核心组件和函数开发，难点攻克以及性能优化。
+三．技术栈：Vue2 + Vue Router + qiankun + LogicFlow。
+四．技术实现：
 
 1. 基于 Vue CLI 搭建前端开发框架，采用 feature 思想组织代码，降低代码耦合度。ESLint 进行代码检查，Prettier 统一代码风格。
-2. 使用 Antd Vue + Less 编写公共组件样式和网页布局，实现包含筛选条件的列表页面等等组件。
+2. 使用 Ant Design Vue + Less 编写公共组件样式和网页布局，实现包含筛选条件的列表页面等等组件。
 3. 使用 qiankun 实现项目微前端，将多个业务系统整合到一个入口。
-4. 使用 logicflow 编写流程图组件，采用组件化思想将其分别封装为 ControlBar、NodePanel、FlowDiagramContent、DetailPanel 四部分，实现了流程图的编辑和只读模式。
+4. 使用 LogicFlow 编写流程图组件，采用组件化思想将其分别封装为 ControlBar、NodePanel、FlowDiagramContent、DetailPanel 四部分，实现了流程图的编辑和只读模式。
 5. 使用发布 - 订阅模式实现拖拽生成的页面与父组件将的数据通信。
 6. 使用 codemirror 实现在线编辑脚本功能。
-7. 通过开启 gzip 压缩、使用 dayjs 代替 Antd Vue 中的 moment、将 Antd Vue 改为按需加载、减小 antd icons 占用的空间实现代码体积优化。通过 optimization.splitChunks 分包实现首屏加载优化。
+7. 通过开启 gzip 压缩、使用 dayjs 代替 Ant Design Vue 中的 moment、将 Ant Design Vue 改为按需加载、减小 Ant Design Icons 占用的空间实现代码体积优化。通过 optimization.splitChunks 分包实现首屏加载优化。
 
-#### 运维系统定制化
+#### 智能运维系统
 
-根据客户要求定制化开发的一个功能页面。该页面可以通过请求模型数据，对元数据动态地进行过滤、筛选、聚合分组，再以得到的数据结合 python 进行数据采集。最后以筛选和采集之后的数据以及模型规则生成多个动态列表格，该表格具有复制删除行、单元格校验、数据聚合等功能。
+一．项目简介：根据配置文件动态渲染业务页面及动态校验规则规则，支撑中台项目使用。
+二．项目职责：负责项目技术调研和搭建，核心组件和函数开发，部署文档站点。
+三．技术栈：React + Mobx + React Router + Ant Design。
+四．技术实现：
 
-1. 使用 Antd 编写组件样式和网页布局。
-2. 封装 axios 配合业务需要对请求和响应进行拦截、JST 鉴权。
-3. 对 Antd 的 Select 组件进行二次封装，实现下拉至底部和滚动到顶部加载相邻页数据。
-4. 使用 React + MobX 精简处理项目数据状态的代码编写。
-5. 迭代优化前端业务代码，解决历史遗留 bug，提高用户体验。
-#### 存储资源池定制化
+1. 使用 Ant Design 的 Select 组件进行二次封装，实现下拉至底部和滚动到顶部加载相邻页数据。
+2. 使用 Ant Design 的 Form 组件，封装动态 Form 表单，实现根据动态数据进行不同 Form 表单的渲染和规则校验，各个 Form 表单之间数据联动。
+3. 根据业务需要根据动态数据便携生成校验规则算法及其动态数据分组算法。
+4. 使用 Ant Design 的 Table 组件，封装动态 Table 表格，实现根据动态数据进行不同 Table 表格行列的渲染，各个 Table 表格之间数据联动。
+5. 使用 React + MobX 精简处理项目数据状态的代码编写优化项目性能。
 
-按照原型图进行动态图表组件、动态左侧导航、动态面包屑导航等等功能编写，最终组合成页面。
+#### 存储资源池
 
-1. 采用组件化思想封装左侧树状导航栏组件，可以根据当前路由自动展开对应导航树。
-2. 根据路由数据和导航数据自动生成面包屑导航。
-3. 封装 echarts，实现统一样式图表，以及图表之间的联动。
-4. 封装定制化进度条组件。
-5. 根据 URL 参数实现动态展示页面，提高页面复用性。
+一．项目简介：实现 NAS、SAS 等多种存储方式等在线管理系统。
+二．项目职责：独立从零负责整个存储管理系统功能实现，进行优化完善以及后期维护迭代。
+三．技术栈：React + Mobx + React Router + Webpack + Ant Design。
+四．技术实现：
 
-#### 首钢电子签章项目
+1. 负责项目整体构建，前端支持管理项目配置，手动触发各项目环境的开发构建。
+2. 封装 ESLint + Prettier + husky + git hook，实现代码规范化开发和提交。
+3. 根据后端返回数据进行渲染动态路由。
+4. 根据路由和导航数据自动生成面包屑。
+5. 使用 ECharts，进行动态图表组件封装，实现统一样式图表，以及图表之间的联动。
+6. 封装定制化进度条组件。
+7. 使用 Ant Design 进行可编辑树状表格组件封装
 
-首钢电子合同平台与集团内其它业务系统集成，完成业务处理和电子合同签订的一体化，保障业务系统可以根据业务数据查询对应的合同，合同文件及过程文件统一保存在股份公司文档管理平台，方便对合同进行统一管理。
+#### 首钢数字化项目：智眼系统 + 电子合同签章平台 + 智能物流协同管控平台
 
-1. 运用 Gulp 搭建前端开发环境，便于前端项目开发自动化构建。
-2. 封装公共组件，提高组件复用性，及规范化。
-3. 构建页面，合理开发业务需求。
-4. 配合后台开发，完善业务逻辑。
+一．项目简介：平台数字化集成项目，智眼系统为高炉车间钢卷检测缺陷。电子合同签章平台为业务人员提供电子合同签订的一体化。智能物流协同管控平台为物流运输部提供物流运输的协同管控。
+二．项目职责：负责前端功能实现，进行优化完善以及后期维护迭代。
+三．技术栈：JQuery + 周边组件库；
+四．技术实现：
 
-项目结果：首钢电子合同平台顺利上线，支持首钢旗下各个业务系统以及外部客商之间合同的签发，
-备案和归档。
+1. 使用架构师基于 JQ 及其周边组件库封装的前端框架快速搭建页面，合理开发业务需求。
+2. 封装公共组件和函数，提高组件和函数的复用性，及规范化。
+3. 开发图形编辑组件，对大内存图形进行缩放展示，并在图形上按坐标标注信息。
+4. 调用第三方接口，实现 PDF 在线签章。
 
-#### 首钢智眼系统
+#### 博智数源烟草精准投放系统
 
-1. 运用 Gulp 搭建前端开发环境，便于前端项目开发自动化构建。
-2. 封装公共组件，提高组件复用性，及规范化。
-3. 构建页面，合理开发业务需求，配合后台开发，完善业务逻辑。
-4. 开发图形编辑组件，对大内存图形进行缩放展示，并在图形上按坐标标注信息。
+一．项目简介：供公司销售人员管理和参考烟草销售信息并进行精准投送售卖烟草系统。
+二．项目职责：搭建项目，开发登录，销售信息图表展示等主要模块，以及项目打包更新。
+三．技术栈：Vue2 + Vue Router + Element UI + ECharts + 百度地图；
+四．技术实现：
 
-#### 烟草精准投放系统
+1.  配置 webpack 缓存及多进程压缩 js 解析 loader 等策略优化构建速度
+2.  封装 axios 响应拦截器，处理异常状态，以在代码中更加方便使用 async/await 处理异步。
+3.  在 index.html 添加 loading 动画和代码分割配合 gzip 优化启动白屏问题。
+4.  ECharts 组件化封装，通过使用不同类型图表组件和数据源展示需要的业务数据，实现数据下钻功能。
+5.  百度地图组件化封装，实现定制化地图标记点展示、区域电子围栏展示。
+6.  通过配置文件动态展示数据可视化大屏，供季度汇报销售数据汇总展示。
 
-1. 项目工程搭建，公共组件开发。
-2. ECharts 组件化封装。
-3. 百度地图组件化封装。
-4. 数据可视化大屏开发。
-5. 项目迭代及维护。
 ### 工作经历
 
-| 公司  | 在职时间 | 职位 |
-| :- | :- | :- |
-| 北京高伟达钽云科技有限公司   | 2019/9 —— 至今    | 高级前端开发 |
-| 北京首钢自动化信息技术有限公司     | 2018/9 —— 2019/7  | 中级前端开发 |
-| 北京博智树源科技股份有限公司 | 2015/10 —— 2018/9 | 前端开发 |
+| 公司                           | 在职时间          | 职位         |
+| :----------------------------- | :---------------- | :----------- |
+| 北京高伟达钽云科技有限公司     | 2019/9 —— 至今    | 高级前端开发 |
+| 北京首钢自动化信息技术有限公司 | 2018/9 —— 2019/7  | 中级前端开发 |
+| 北京博智数源科技股份有限公司   | 2017/10 —— 2018/9 | 前端开发     |
 
 ### 教育经历
 
-| 学校 | 专业 | 入学时间 —— 毕业时间 |
-| :- | :- | :- |
-| 太原理工大学现代科技学院 | 高分子材料与工程 | 2011/9 —— 2015/6     |
+太原理工大学现代科技学院 2011/9 —— 2015/6
