优化文档格式及内容更新

--- a/面试/2. 你有哪些要问我的？.md
+++ b/面试/2. 你有哪些要问我的？.md
@@ -17,13 +17,13 @@
 
 合同和谁签？
 
-上班时长 996？ 八小时工作制？
+上班时长 996？八小时工作制？
 加班费？调休？
 打车费？
 请假？
 年假
 
-|          |             初面              |             二面             |                              终面                              |
-| :------: | :---------------------------: | :--------------------------: | :------------------------------------------------------------: |
-|  面试官  |              HR               |           用人经理           |                          HR/用人经理                           |
-| 提问目的 | 岗位真实性,公司背景，职业发展 | 岗位要求、领导风格、自身缺陷 | 一切顺利，问个人问题；基本没戏，问缺陷；模凌两可，问下一步流程 |
+|          |              初面              |             二面             |                              终面                              |
+| :------: | :----------------------------: | :--------------------------: | :------------------------------------------------------------: |
+|  面试官  |               HR               |           用人经理           |                          HR/用人经理                           |
+| 提问目的 | 岗位真实性，公司背景，职业发展 | 岗位要求、领导风格、自身缺陷 | 一切顺利，问个人问题；基本没戏，问缺陷；模凌两可，问下一步流程 |
